Save/Update files [ci skip]

--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -1851,8 +1851,8 @@
  desc_per_building_isfahan:0 "この地域の資源の一部は、世界の首都へとエスファハーンを再構築する事業に費やされている。"
  per_isfahan_maidan:0 "エスファハーン・ネスフェ＝イ・ジャハーン"
  desc_per_isfahan_maidan:0 "「エスファハーンは世界の半分である」とは、古いことわざである。都市を再建したことで、これはこれまで以上に真実である。この都市は、ペルシアだけでなく、ペルシア世界全体の芸術的、政治的、文化的な首都である。"
- MOVE_WITH_TRANSPORT:0 "\n§Y輸送船を使ってここに移動することが可能です§!"
- MOVE_WITH_TRANSPORT_BUSY:0 "\n§R輸送船を使ってここに移動することが可能ですが、現在すべての輸送船は満杯です§!"
+ MOVE_WITH_TRANSPORT:0 "輸送船を使ってここに移動することが可能です。"
+ MOVE_WITH_TRANSPORT_BUSY:0 "輸送船を使ってここに移動することが可能ですが、現在すべての輸送船は満杯です。"
  CAN_EXPLORE_TOOLTIP:0 "右クリックで、この海域を探検するよう海軍に指示します。"
  CANNOT_CIRCUMNAVIGATE_ALREADY_CIRCUMNAVIGATED:0 "世界周航任務は一度しかできません！"
  CANNOT_CIRCUMNAVIGATE_NO_TECH:0 "世界周航任務を行うには外交技術レベルが§Y$NUM$§!以上必要です。"
