--- a/source/localisation/institutions_l_english.yml
+++ b/source/localisation/institutions_l_english.yml
@@ -27,8 +27,7 @@
  NEIGHBOR_NOT_OWNED_IS_FEUDAL:0 "隣接する国が§Y封建制§!を受容している"
  PORT_OR_CAPITAL_IN_COLONY_FEUDAL:0 "植民地国家の港もしくは首都"
  CAPITAL_IN_OLD_WORLD_FEUDAL:0 "旧世界の非部族国家の首都"
- INSTITUTION_PENALTY_INFO:0 "$NAME$を持たないことによる不利益は現在$CURR$であるが、年ごとに§Y+1%§!増え、最大$MAX$までなる。"
- INSTITUTION_PENALTY_INFO_FULL:0 "$NAME$を持たないことによるペナルティは$CURR$です。"
+ INSTITUTION_PENALTY_INFO:2 "$NAME|Y$を受容していない：$PENALTY$\n"
  CV_EMBRACE_INSTITUTION:0 "$NAME$を受容する。"
  INSTI_NOT_YET:0 "この制度はまだ確立されていない。"
  MBRACE_INSTITUTI:1 "毎月$SPEED$の速さで拡がっています。"
@@ -115,3 +114,4 @@
  tooltip_province_protestant_RB:0 "州がプロテスタント、聖公会、改革派のいずれかである"
  tooltip_owner_protestant:2 "交易会社でなく、国教がプロテスタント、聖公会または改革派"
  desc_birthplace_of_the_renaissance:0 "この州はルネサンスの中核で、今でもその発祥によって恩恵を受けている。"
+ INSTITUTION_GREAT_POWER_BONUS:1 "$NUM|Y$種類の制度を受容していないことへのペナルティー：$BONUS$"
