--- a/source/localisation/leviathan_l_english.yml
+++ b/source/localisation/leviathan_l_english.yml
@@ -569,8 +569,8 @@
  EXPAND_INFRASTRUCTURE_TOOLTIP_MODIFIER:0 "インフラの拡張によって、この州は以下の効果を得ます：\n$MODIFIER$\n"
  CEDE_PROVINCE_DEMAND_TRIBAL:0 "部族の土地"
  cb_native_american_tribal_feud:0 "部族の縄張り争い"
- NATIVE_TRIBE_MIGRATORY_DEVELOPMENT_HEADER_TOOLTIP:0 "§Y部族発展度§!\n毎月、荒廃度§Y100％§!以下の土地に放牧することで、部族発展度を獲得します。他国に属する部族の土地に放牧することで、さらに部族発展度を獲得できます。"
- NATIVE_TRIBE_SETTLED_DEVELOPMENT_HEADER_TOOLTIP:0 "§Y部族発展度§!\n毎月、首都にある自国の部族発展度は、自国の各植民地にある建造物の効果で増加していきます。"
+ NATIVE_TRIBE_MIGRATORY_DEVELOPMENT_HEADER_TOOLTIP:1 "§YTribal Development§!\nEach month we gain tribal development from grazing lands below §Y100%§! devastation. We gain additional tribal development from grazing on land in tribal land belonging to another nation.\nThe amount of tribal development gained will be divided by the current tribal development if it's higher than 1."
+ NATIVE_TRIBE_SETTLED_DEVELOPMENT_HEADER_TOOLTIP:1 "§YTribal Development§!\nEach month the development of our tribe in the capital grows thanks to the buildings in our various settlements.\nThe amount of tribal development gained will be divided by the current tribal development if it's higher than 1."
  TAKE_NATIVE_AMERICAN_LAND_WAR_NAME:0 "$ORDER$$FIRST$・$SECOND$ 縄張り争い"
  NATIVE_TRIBE_SETTLE_NON_TRIBAL_LAND:0 "§R$PROV|Y$は我が部族の土地ではありません。§!"
  NATIVE_TRIBE_SETTLE_IS_NOT_SETTLED:0 "§R我々の部族は定住していません§!"
@@ -1406,7 +1406,7 @@
  special_regency_events.6.b:0 "彼女に、[Root.GetName]の支配権を与えよ。"
  special_regency_events.6.c:0 "彼女を後継者にする。"
  special_regency_events.6.tt:0 "§Y[Root.Consort.GetName]§!が女王摂政になる。"
- special_regency_events.6.tt2:0 "§Y [Root.Consort.GetName]§!が後継者を継承する。"
+ special_regency_events.6.tt2:1 "§Y [Root.Consort.GetName]§!が後継者を継承する。"
  special_regency_events.7.t:0 "辛酉の獄"
  special_regency_events.7.d:0 "人はただ一つのものだけではなく、そしてその全てが良いということではありません。[Root.Monarch.GetName]は、その利口な性格に加え、[Root.GetName]に住むキリスト教徒に対して宗教的迫害を開始することを決定しました。しかし、その理由はもっと平凡な理由のように見えます。というのも、君主の政敵のほぼ全員がこの外国の信仰に大きく傾倒しているように見えるからです。自国の安全担保のため、彼ら全員の処刑を我が君主は提案しています。"
  special_regency_events.7.a:0 "彼らを処分せざるを得ないだろう。"
@@ -1728,3 +1728,56 @@
  custom_extra_manpower_at_religious_war_desc:0 "唯一まことの信仰を奉じる男たちは、唯一まことの国を愛する傾向にある。彼ら戦士は喜んで自国に加わって、我が信仰の敵に対抗してくれるのだ！"
  custom_may_explore:0 "冒険の呼び声"
  custom_may_explore_desc:0 "この世界には非常に多くのものが存在している。それは、非常に多くの発見すべき見つけるべき驚異の事柄、非常に多くの利用すべき機会、そして、我々を待つ非常に多くの隠された宝物だ！もし、冒険の呼び声に従い、素晴らしき世界を発見しないなら、何と馬鹿げたことか！"
+ baiturrahman_grand_mosque:0 "バイトゥッラフマン大モスク"
+ bam_citadel:0 "バム城塞"
+ bara_katra:0 "バラ・カトラ"
+ bran_castle:0 "ブラン城"
+ brandenburg_gate:0 "ブランデンブルク門"
+ buda_castle:0 "コルヴィナ文庫"
+ cahokia:0 "カホキア"
+ cartagena_de_indias:0 "カルタヘナ・デ・インディアスの要塞群"
+ chan_chan_citadel:0 "チャン・チャン砦"
+ doges_palace:0 "ドゥカーレ宮殿"
+ duomo_milano:0 "ミラノのドゥオーモ"
+ dutch_polders:0 "オランダの干拓地"
+ ellora_caves:0 "エローラ石窟群"
+ erdene_zuu:0 "エルデネ・ゾー"
+ etchimiadzin_cathedral:0 "エチミアジン大聖堂"
+ fuerte_del_morro:0 "モロ城"
+ gomateshwara_statue:0 "ゴムテスワル像"
+ chola_temples:0 "大チョーラ朝寺院群"
+ gyeongbok_palace:0 "景福宮"
+ hampi:0 "ハンピ"
+ prague:0 "プラハの歴史地区"
+ holy_city_kairouan:0 "聖地ケルアン"
+ imam_hussein_al-abbas:0 "フセインとアル＝アッバースの聖廟"
+ kashi_vishwanath:0 "カーシー・ヴィシュヴァナート寺院"
+ khajuraho:0 "カジュラーホー"
+ kilwa_city:0 "キルワ市"
+ krakow_cloth_hall:0 "クラクフ織物会館"
+ maidan-e_naqsh-e_jahan:0 "メイダーネ・ナクシェ・ジャハーン"
+ malbork_castle:0 "マルボルク城"
+ malta_forts:0 "マルタ要塞"
+ mehrangarh_fort:0 "メヘラーンガル城"
+ nan_madoll:0 "ナンマトル"
+ porcelain_tower_nanjing:0 "大報恩寺"
+ qhapaq_nam:0 "カパック・ニャン"
+ rila_monasteries:0 "リラ修道院"
+ churches_lalibela:0 "ラリベラの岩窟教会群"
+ royal_palace_caserta:0 "カゼルタ宮殿"
+ san_antonio_missions:0 "サン・アントニオの伝道所群"
+ sankore_madrasah:0 "サンコーレ・マドラサ"
+ santa_maria_del_fiore:0 "サンタ・マリア・デル・フィオーレ大聖堂"
+ spiral_minaret_samarra:0 "サーマッラーの大モスク"
+ sultan_ahmed_mosque:0 "スルタンアフメト・モスク"
+ sun_temple_konarak:0 "コナーラクのスーリヤ寺院"
+ swayambhunath:0 "スワヤンブナート"
+ white_house:0 "ホワイトハウス"
+ tikal:0 "ティカル"
+ tiwanaku:0 "ティワナク"
+ tortuga_island:0 "トルトゥーガ島"
+ ulm_minster_great_project:0 "ウルム大聖堂"
+ walls_benin:0 "ベニンの壁"
+ winter_palace:0 "冬宮殿"
+ zacatecas_mine_city:0 "サカテカスの鉱山都市"
+ commission_some_rock_art_title:0 "岩絵の依頼"
