--- a/source/localisation/mandate_of_heaven_l_english.yml
+++ b/source/localisation/mandate_of_heaven_l_english.yml
@@ -375,8 +375,8 @@
  FILTER_ALLIES:0 "同盟国"
  FILTER_RIVALS:0 "ライバル"
  FILTER_WAR_ENEMIES:0 "戦争の敵"
- FILTER_POS_OPINION:0 "肯定的な評価"
- FILTER_NEG_OPINION:0 "否定的な評価"
+ FILTER_POS_OPINION:1 "§G+ve§! 評価"
+ FILTER_NEG_OPINION:1 "§R-ve§! 評価"
  FILTER_PLAYERS:0 "プレイヤー"
  FILTER_ALLIES_DESC:0 "我々自身と我々の同盟国を表示します。"
  FILTER_RIVALS_DESC:0 "我々自身と我々のライバルを表示します。"
