--- a/source/localisation/mare_nostrum_l_english.yml
+++ b/source/localisation/mare_nostrum_l_english.yml
@@ -38,7 +38,6 @@
  TRADELEAGUE_THEYLEFT_BADLEAD:0 "彼らはもはやリーダーの資格はありません。\nリーダーは名声のある商人共和国でなければなりません。"
  TRADELEAGUE_THEYLEFT_TP:0 "彼らは交易力を\n貿易同盟の外の$TO|Y$へ伝播し始めました。"
  TRADELEAGUE_THEYLEFT_WAR:0 "彼らは戦争中です。"
- TRADE_LEAGUE_TOO_BACKWARDS:0 "彼らはあまりにも原始的です。"
  TRADE_LEAGUE_TOO_BIG:0 "貿易同盟の加盟国は一つの州のみ保持することができます。"
  TRADELEAGUE_LEADER:0 "同盟指導国：$LEADER|G$"
  NEED_PRESTIGE_FOR_TRADE_LEAGUE:0 "指導国が貿易同盟を指導し続けるためには、少なくとも$PRESTIGE|Y$威信が必要です。"
@@ -104,8 +103,8 @@
  UNIT_AUTO_REPAIR_DAMAGED:0 "§Y損傷した船を修復§!"
  BAGUETTE:0 "バゲット"
  UNIT_AUTO_REPAIR_DAMAGED_DELAYED:0 "ダメージがある船は全て切り離され、修理のために港へ向かいます。そしてこのユニットへ戻ります。"
- ARMY_ACCESS:0 "\n\n我々はこの地の軍事通行権を持っています："
- ARMY_NO_ACCESS:0 "\n\n我々はこの地の軍事通行権を持って§Rいません§!："
+ ARMY_ACCESS:0 "我々はこの地の軍事通行権を持っています："
+ ARMY_NO_ACCESS:0 "我々はこの地の軍事通行権を持っていません："
  PRIMITIVE_ACCESS:0 "\n我々の征服者はこれらの未開の地を通じて我々を導くことができます。"
  EXILED_ACCESS:0 "\n追放軍は自由に移動できます。"
  BOARD_SHIPS_ACCESS:0 "\n乗船します。"
