--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -740,7 +740,7 @@
  DIPLOMAT_RETURNED_BTN3:0 "移動"
  DIPLOMAT_RETURNED_MAP:0 "外交官帰着"
  KNOWLEDGE_SHARING_TITLE:0 "知識共有の提供"
- KNOWLEDGE_SHARING_SETUP:0 "ある国が知識共有に合意したとき"
+ KNOWLEDGE_SHARING_SETUP:1 "ある国が知識共有に関する決定をしたとき"
  KNOWLEDGE_SHARING_HEADER:0 "使者"
  KNOWLEDGE_SHARING_1:0 "$RECIPIENT_COUNTRY$"
  KNOWLEDGE_SHARING_2:0 "$MONARCHTITLE$"
@@ -748,7 +748,7 @@
  KNOWLEDGE_SHARING_4:0 "$WHO$からの知識共有の提案について"
  KNOWLEDGE_SHARING_5:0 "$RESULT$ことを決断したという$TYPE$知らせを受けました。"
  KNOWLEDGE_SHARING_6:0 "$EFFECT$"
- KNOWLEDGE_SHARING_LOG:0 "$ACTOR$、$WHO$と知識を共有へ"
+ KNOWLEDGE_SHARING_LOG:1 "$ACTOR$、$RECIPIENT$の知識共有を$RESULT$"
  KNOWLEDGE_SHARING_BTN1:1 "OK"
  KNOWLEDGE_SHARING_BTN2:1 "OK"
  KNOWLEDGE_SHARING_BTN3:0 "移動"
@@ -766,7 +766,7 @@
  FLEETBASING_BTN2:0 "OK"
  FLEETBASING_BTN3:0 "移動"
  OFFER_FLEETBASING_TITLE:0 "港湾使用権の要求"
- OFFER_FLEETBASING_SETUP:0 "ある国が港湾使用権の提案を受諾したとき"
+ OFFER_FLEETBASING_SETUP:1 "ある国が港湾使用権に関する決定をしたとき"
  OFFER_FLEETBASING_HEADER:0 "使者"
  OFFER_FLEETBASING_1:0 "$RECIPIENT_COUNTRY$"
  OFFER_FLEETBASING_2:0 "$MONARCHTITLE$、$TYPE$知らせです。"
@@ -774,7 +774,7 @@
  OFFER_FLEETBASING_4:0 "は"
  OFFER_FLEETBASING_5:0 "$WHO$からの港湾使用権の要求を$RESULT$ことを決定しました。"
  OFFER_FLEETBASING_6:0 "$EFFECT$"
- OFFER_FLEETBASING_LOG:0 "$ACTOR$の港湾使用権、$WHO$に付与へ"
+ OFFER_FLEETBASING_LOG:1 "$ACTOR$、$RECIPIENT$の港湾使用権提案を$RESULT$"
  OFFER_FLEETBASING_BTN1:0 "OK"
  OFFER_FLEETBASING_BTN2:0 "OK"
  OFFER_FLEETBASING_BTN3:0 "移動"
@@ -3361,10 +3361,10 @@
  REGENT_SETUP:0 "摂政が我が国を引き継いだとき"
  REGENT_HEADER:0 "知事からの報告"
  REGENT_1:0 "摂政！"
- REGENT_2:1 "前君主は世を去るには早すぎました。後継者はまだ君主の役割を担う準備が整っていません。"
- REGENT_3:0 "上位貴族からなる摂政評議会が"
- REGENT_4:0 "我が国を支配します。"
- REGENT_6:1 "我が国は新たな王の即位を待っている間、外交上の選択肢が制限されます。"
+ REGENT_2:2 "前$OLDMONARCHTITLE$は世を去るには早すぎました。$HEIRTITLE$はまだ$HEIRMONARCHTITLE$の役割を担う準備が整っていません。"
+ REGENT_3:1 "そのため、$ESTATE$からなる摂政評議会が"
+ REGENT_4:1 "我が$COUNTRYRANK$を支配します。"
+ REGENT_6:2 "我が国は新たな$HEIRMONARCHTITLE$の即位を待つ間、外交上の選択肢が制限されます。"
  REGENT_LOG:0 "摂政評議会が今や我が国を支配"
  REGENT_BTN1:0 "OK"
  REGENT_BTN2:0 "OK"
@@ -3373,7 +3373,7 @@
  REGENTOTHER_SETUP:0 "摂政が他国を引き継いだとき"
  REGENTOTHER_HEADER:0 "使者"
  REGENTOTHER_1:0 "$ACTOR$"
- REGENTOTHER_2:1 "$RMONARCHTITLE$、彼らの後継者は若すぎるため、"
+ REGENTOTHER_2:2 "$RMONARCHTITLE$、彼らの$HEIRTITLE$は若すぎるため、"
  REGENTOTHER_3:0 "摂政が"
  REGENTOTHER_4:0 "$COUNTRY$を支配するでしょう。"
  REGENTOTHER_6:0 "このことは彼らの外交を弱体化させるでしょう。もしや今が彼らを叩く時ではないでしょうか？"
@@ -3381,28 +3381,27 @@
  REGENTOTHER_BTN1:0 "OK"
  REGENTOTHER_BTN2:0 "OK"
  REGENTOTHER_BTN3:0 "移動"
- QUEENREGENT_TITLE:0 "$QUEENPRINCE$摂政"
+ QUEENREGENT_TITLE:1 "$CONSORTTITLE$摂政"
  QUEENREGENT_SETUP:0 "王妃が我が国を引き継いだとき"
  QUEENREGENT_HEADER:0 "知事からの報告"
- QUEENREGENT_1:0 "$QUEENPRINCE$摂政！"
- QUEENREGENT_2:0 "前君主は世を去るには早すぎました。後継者はまだ君主の役割を担う準備が整っていません。"
- QUEENREGENT_3:0 "$NAME$は今、後継者が適切な年齢になるまで"
- QUEENREGENT_4:0 "我が国を支配します。"
- QUEENREGENT_5:0 "摂政評議会とは異なり、"
- QUEENREGENT_6:0 "我々はまだ戦争を行うことかできます。"
- QUEENREGENT_LOG:0 "$QUEENPRINCE$が今や我が国を支配"
+ QUEENREGENT_1:1 "$CONSORTTITLE$摂政！"
+ QUEENREGENT_2:1 "前$OLDMONARCHTITLE$は世を去るには早すぎました。$HEIRTITLE$はまだ$HEIRMONARCHTITLE$の役割を担う準備が整っていません。"
+ QUEENREGENT_3:1 "$NAME$は今、$HEIRTITLE$が適切な年齢になるまで"
+ QUEENREGENT_4:1 "我が$COUNTRYRANK$を支配します。"
+ QUEENREGENT_5:1 "摂政評議会とは異なり、我が国は宣戦布告が可能なままです。"
+ QUEENREGENT_LOG:1 "$CONSORTTITLE$が今や我が国を支配"
  QUEENREGENT_BTN1:0 "OK"
  QUEENREGENT_BTN2:0 "OK"
  QUEENREGENT_BTN3:0 "移動"
- QUEENREGENTOTHER_TITLE:0 "$QUEENPRINCE$摂政"
+ QUEENREGENTOTHER_TITLE:1 "$CONSORTTITLE$摂政"
  QUEENREGENTOTHER_SETUP:0 "王妃が他国を引き継いだとき"
  QUEENREGENTOTHER_HEADER:0 "使者"
  QUEENREGENTOTHER_1:0 "$ACTOR$"
- QUEENREGENTOTHER_2:0 "$RMONARCHTITLE$、彼らの後継者は若すぎるため、"
- QUEENREGENTOTHER_3:0 "$QUEENPRINCE$"
+ QUEENREGENTOTHER_2:1 "$RMONARCHTITLE$、彼らの$HEIRTITLE$は若すぎるため、"
+ QUEENREGENTOTHER_3:1 "$CONSORTTITLE$"
  QUEENREGENTOTHER_4:0 "が$COUNTRY$を支配します。"
  QUEENREGENTOTHER_6:0 "哀れな！もしや今が彼らを叩く時ではないでしょうか？"
- QUEENREGENTOTHER_LOG:0 "前$QUEENPRINCE$が今や$COUNTRY$を支配"
+ QUEENREGENTOTHER_LOG:1 "前$CONSORTTITLE$が今や$COUNTRY$を支配"
  QUEENREGENTOTHER_BTN1:0 "OK"
  QUEENREGENTOTHER_BTN2:0 "OK"
  QUEENREGENTOTHER_BTN3:0 "移動"
@@ -4947,7 +4946,7 @@
  NEWHEIR_4:0 "後継は確実です。"
  NEWHEIR_5:0 "$LESSERINUNION_01$"
  NEWHEIR_6:0 "$LESSERINUNION_02$"
- NEWHEIR_LOG:0 "$HEIRNAME$、新たな王位継承者に！"
+ NEWHEIR_LOG:1 "新たな王位継承者が！"
  NEWHEIR_BTN1:0 "OK"
  NEWHEIR_BTN2:0 "OK"
  NEWHEIR_BTN3:0 "移動"
