--- a/source/localisation/sprite_packs_l_english.yml
+++ b/source/localisation/sprite_packs_l_english.yml
@@ -271,3 +271,7 @@
  dlc107_CHA_sprite_pack:0 "チャンパのスプライト"
  dlc107_LNA_sprite_pack:0 "ラーンナーのスプライト"
  dlc107_LUA_sprite_pack:0 "ルアン・パバーンのスプライト"
+ dlc111_KON_sprite_pack:0 "コンゴのスプライト"
+ dlc111_RWA_sprite_pack:0 "ルワンダのスプライト"
+ dlc111_SKA_sprite_pack:0 "東バントゥーのスプライト"
+ dlc111_ZIM_sprite_pack:0 "Southern African Sprites"
