--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -76,7 +76,7 @@
  CAPITAL_CHANGE:0 "§Y$NEW$§Wが新しい首都になります。\n"
  POLICY_CHANGE:0 "$SLIDER$$VALUE$を$DIRECTION$します。\n"
  RELIGION_ENABLED:0 "§Y$NEW$§Wが可能になりました。\n"
- RELIGION_CHANGE_PROV:0 "§Y$WHERE$§Wの宗教が§Y$NEW$§Wに変更されます。\n"
+ RELIGION_CHANGE_PROV:0 "$WHERE|Y$の宗教が$NEW|Y$に変更されます。\n"
  CENTER_OF_REFORMATION:0 "§Y$WHERE$§Wは改革の中心地となります。\n"
  REMOVE_CENTER_OF_REFORMATION:0 "§Y$WHERE$§Wは改革の中心地ではなくなります。\n"
  CENTER_OF_REFORMATION_CENTER:2 "§Y$PROVINCE$§!は§Y$RELIGION$§!の$TYPE$です。\n近隣の州はそれがここにあり、広がることができる州がある限り徐々に§Y$RELIGION$§!に改宗されます。"
@@ -128,14 +128,14 @@
  BECOME:0 "になります"
  NOLONGER:0 "ではなくなります"
  PROV_MANPOWER:0 "$WHERE$の人的資源$VALUE$を$DIRECTION$します。\n"
- DISCOVER:0 "§Y$WHERE$§Wを発見します。\n"
- ADD_BUILDING:0 "§Y$WHERE$§Wで§Y$NAME$§Wを獲得します。\n"
- REM_BUILDING:0 "§Y$WHERE$§Wで§R$NAME$§Wを失います。\n"
- GOODS_CHANGE:0 "§Y$WHERE$§Wでは今後、§Y$NAME$§Wが生産されます。\n"
- PCULTURE_CHANGE:0 "§Y$WHERE$§Wの文化は§Y$NAME$§Wとなります。\n"
- SECEDE_PROVINCE:0 "§Y$WHO$§Wに§Y$WHERE$§Wを譲ります。\n"
- INHERIT:0 "§Y$WHO$§Wを継承します。\n"
- RELEASE:0 "独立国家として§Y$WHO$§Wを解放します。\n"
+ DISCOVER:0 "$WHERE|Y$を発見します。\n"
+ ADD_BUILDING:0 "$WHERE|Y$で$NAME|Y$を獲得します。\n"
+ REM_BUILDING:0 "$WHERE|Y$で$NAME|R$を失います。\n"
+ GOODS_CHANGE:0 "$WHERE|Y$では今後、$NAME|Y$が生産されます。\n"
+ PCULTURE_CHANGE:0 "$WHERE|Y$の文化が$NAME|Y$となります。\n"
+ SECEDE_PROVINCE:0 "$WHO|Y$に$WHERE|Y$を割譲します。\n"
+ INHERIT:0 "$WHO|Y$を継承します。\n"
+ RELEASE:0 "独立国家として$WHO|Y$を解放します。\n"
  admiralty:0 "海軍本部"
  artisan_workshop:0 "職人作業場"
  cathedral:0 "大聖堂"
@@ -417,7 +417,7 @@
  southern_african:0 "アフリカ南部"
  african:0 "東バントゥー"
  great_lakes_group:0 "アフリカ大湖沼"
- kongo_group:0 "コンゴ"
+ kongo_group:1 "コンゴ"
  yaka:0 "ヤカ"
  lunda:0 "ルンダ"
  mbangala:0 "ムバンガラ"
@@ -2595,7 +2595,7 @@
  LEDGER_AGE:0 "年齢"
  NOMANPOWER:0 "このユニットを構築するには$NUMBER|Y$以上の健康な男子（§G人的資源§!）が必要です。"
  NOSAILORS:0 "このユニットを構築するには$NUMBER|Y$以上の健康な男子（§G水兵§!）が必要です。"
- ESTIMATE_ARIVAL:0 "$DATE$に$PROV$へ到着するでしょう"
+ ESTIMATE_ARIVAL:0 "$DATE$に$PROV|Y$へ到着するでしょう"
  MOVEMENT_LOCKED:0 "この部隊は次に向かう州への移動距離が§Y$AMT$%§!を超えており、進軍を止めることや方向を変えることはできません。"
  MOVEMENT_LOCKED_SPECIFIC:0 "§Y$UNITNAME$§!は次に向かう州への移動距離が§Y$AMT$%§!を超えており、進軍を止めることや方向を変えることはできません。"
  MS_JOINGAME:0 "ゲームに参加"
@@ -3416,9 +3416,9 @@
  OURWARALLY:0 "戦争での同盟国"
  STABHIT_FROM_SUBJECT:0 "彼らは我々の君主です"
  OUR_OVERLORD:0 "彼らは我々の宗主国です"
- bg_war_1_1:0 "§Y$WARADJECTIVE1$$WARNAME$§Wは、$RESULT1$の末$NUMBEROF$$YEARS$後に終了しました。"
- bg_war_1_2:0 "§Y$WARADJECTIVE1$$WARNAME$§Wにおいて$MONARCHTITLE$$MONARCHNAME$$WARADJECTIVE2$と我々の軍隊は$RESULT2$のでした。"
- bg_war_1_3:0 "$RESULT3$§Y$WARNAME$§Wは、$NUMBEROF$$YEARS$間続きました。"
+ bg_war_1_1:0 "$WARADJECTIVE1|Y$$WARNAME|Y$は、$RESULT1$の末$NUMBEROF$$YEARS$後に終了しました。"
+ bg_war_1_2:0 "$WARADJECTIVE1|Y$$WARNAME|Y$において$MONARCHTITLE$$MONARCHNAME$$WARADJECTIVE2$と我々の軍隊は$RESULT2$のでした。"
+ bg_war_1_3:0 "$RESULT3$$WARNAME|Y$は、$NUMBEROF$$YEARS$間続きました。"
  bg_time_1:0 "小さな"
  bg_time_2:0 "短い"
  bg_time_3:0 "短い"
@@ -4139,20 +4139,20 @@
  NUM_OF_SUBJECTS:0 "従属国の数"
  USE_DEVOTION:0 "信仰を使用している"
  IMPORTANT_WAR:0 "重要な戦争中である"
- HAVE_LESS_INFANTRY_THAN:0 "歩兵が右記未満である："
- HAVE_MORE_INFANTRY_THAN:0 "歩兵が右記以上である："
- HAVE_LESS_CAVALRY_THAN:0 "騎兵が右記未満である："
- HAVE_MORE_CAVALRY_THAN:0 "騎兵連隊が右記以上である："
- HAVE_LESS_ARTILLERY_THAN:0 "砲兵が右記未満である："
- HAVE_MORE_ARTILLERY_THAN:0 "砲兵が右記以上である："
- HAVE_LESS_BIG_SHIPS_THAN:0 "大型船が右記未満である："
- HAVE_MORE_BIG_SHIPS_THAN:0 "大型船が右記以上である："
- HAVE_LESS_LIGHT_SHIPS_THAN:0 "小型船が右記未満である："
- HAVE_MORE_LIGHT_SHIPS_THAN:0 "小型船が右記以上である："
- HAVE_LESS_GALLEYS_SHIPS_THAN:0 "ガレー船が右記未満である："
- HAVE_MORE_GALLEYS_SHIPS_THAN:0 "ガレー船が右記以上である："
- HAVE_LESS_TRANSPORTS_THAN:0 "輸送船が右記未満である："
- HAVE_MORE_TRANSPORTS_THAN:0 "輸送船が右記以上である："
+ HAVE_LESS_INFANTRY_THAN:2 "歩兵が$COUNTRY|Y$（$NUM|Y$）より少ない"
+ HAVE_MORE_INFANTRY_THAN:2 "歩兵が$COUNTRY|Y$（$NUM|Y$）以上である"
+ HAVE_LESS_CAVALRY_THAN:2 "騎兵が$COUNTRY|Y$（$NUM|Y$）より少ない"
+ HAVE_MORE_CAVALRY_THAN:2 "騎兵連隊が$COUNTRY|Y$（$NUM|Y$）以上である"
+ HAVE_LESS_ARTILLERY_THAN:2 "砲兵が$COUNTRY|Y$（$NUM|Y$）より少ない"
+ HAVE_MORE_ARTILLERY_THAN:2 "砲兵が$COUNTRY|Y$（$NUM|Y$）以上である"
+ HAVE_LESS_BIG_SHIPS_THAN:2 "大型船が$COUNTRY|Y$（$NUM|Y$）より少ない"
+ HAVE_MORE_BIG_SHIPS_THAN:2 "大型船が$COUNTRY|Y$（$NUM|Y$）以上である"
+ HAVE_LESS_LIGHT_SHIPS_THAN:1 "小型船が$COUNTRY|Y$（$NUM|Y$）より少ない"
+ HAVE_MORE_LIGHT_SHIPS_THAN:2 "小型船が$COUNTRY|Y$（$NUM|Y$）以上である"
+ HAVE_LESS_GALLEYS_SHIPS_THAN:2 "ガレー船が$COUNTRY|Y$（$NUM|Y$）より少ない"
+ HAVE_MORE_GALLEYS_SHIPS_THAN:2 "ガレー船が$COUNTRY|Y$（$NUM|Y$）以上である"
+ HAVE_LESS_TRANSPORTS_THAN:2 "輸送船が$COUNTRY|Y$（$NUM|Y$）より少ない"
+ HAVE_MORE_TRANSPORTS_THAN:2 "輸送船が$COUNTRY|Y$（$NUM|Y$）以上である"
  HAVE_LESS_INFANTRY_FRACTION_THAN:0 "歩兵の割合が右記未満である："
  HAVE_MORE_INFANTRY_FRACTION_THAN:0 "歩兵の割合が右記以上である："
  HAVE_LESS_CAVALRY_FRACTION_THAN:0 "騎兵の割合が右記未満である："
@@ -4441,7 +4441,7 @@
  UW_ATTACH_TO:0 "常に$NAME$に従って結合する。"
  UW_DETACH_FROM:0 "以下から$NAME$を切り離します。"
  UNIT_DETACH:0 "§Y切り離す§!"
- UNIT_ATTACH:1 "§Y結合する§!\n§Yシフト§!を押しながら選択すると、同じ州にいる接触可能な部隊のいずれかに結合します。"
+ UNIT_ATTACH:2 "§Y結合する§!"
  DIPRELCH_STRAINED_UNION:0 "連合内の文化の違い"
  ottoman_eastern_carabinier:0 "東方騎銃兵"
  ottoman_eastern_carabinierDESCR:0 "本質的には、騎銃兵としても知られている短いマスケット銃またはライフルを携帯する馬に乗った歩兵である。馬から降りて徒歩で戦う能力は、彼らに戦闘における大きな柔軟性をもたらした。"
@@ -4927,8 +4927,8 @@
  RIVALSWITH:0 "$LIST$を宿敵とみなしています。"
  IS_ISLAND:0 "は島である。"
  IS_NOT_ISLAND:0 "は島ではない。"
- IS_NOT_EMPTY:0 "は国家が所有している。"
- IS_EMPTY:0 "は植民地のために開かれている。"
+ IS_NOT_EMPTY:1 "$PROVINCE|Y$は国家が所有している。"
+ IS_EMPTY:1 "$PROVINCE|Y$は植民できる空白地である。"
  ACH:0 "アカイア"
  ACH_ADJ:0 "アカイア"
  ACH_ADJ2:0 "アカイア"
@@ -5117,7 +5117,7 @@
  GREATPOWERWIN_NAME:0 "名前"
  GREATPOWERWIN_RATING:0 "格付け"
  GREATPOWERWIN_DEV:0 "開発度"
- GREATPOWERWIN_TECH:0 "技術コスト"
+ GREATPOWERWIN_TECH:1 "制度"
  GREATPOWERWIN_TITLE:0 "世界の列強"
  OPEN_GP_VIEW:0 "§Y列強を見る§!"
  anti_tax_rebels_army:0 "農民軍"
@@ -5755,7 +5755,6 @@
  indian_coast:0 "インド沿岸"
  australian_coast:0 "オーストラリア沿岸"
  indonesian_region:0 "インドネシア"
- west_african_coast:0 "西アフリカ沿岸"
  japanese_region:0 "日本"
  chinese_coast:0 "中国沿岸"
  persian_region:0 "ペルシア地方"
@@ -8131,6 +8130,7 @@
  LEDGER_BLPW:0 "海上封鎖"
  BLOCKADE_PENALTY_ALL:0 "全ての港が封鎖された"
  BLOCKADE_PENALTY_NONE:0 "封鎖されている港はない"
- CARPET_SIEGE_AREAS:0 "絨毯占領地域"
- MANAGE_CARPET_SIEGE:0 "§Y絨毯占領管理§!"
- CARPET_SIEGE_DESC:0 "絨毯包囲を命じられた軍隊は、戦闘を避けながら敵の支配下にある州の包囲を試みます。"
+ CARPET_SIEGE_AREAS:1 "自動包囲地域"
+ MANAGE_CARPET_SIEGE:2 "§Y自動包囲管理§!"
+ CARPET_SIEGE_DESC:1 "自動包囲を命じられた軍隊は、戦闘を避けながら敵の支配下にある州の包囲を試みます。"
+ regent_male:0 "摂政"
