--- a/source/localisation/core_l_english.yml
+++ b/source/localisation/core_l_english.yml
@@ -293,7 +293,7 @@
  INSTI_PRIMITIVE_CANNOT_EMBRACE_GOVERNMENT:0 "原始国家は、制度を受容する前に政府を変更しなければなりません。"
  INSTI_TOO_EXPENSIVE:1 "我々が$NAME|Y$を受容するためには$COST|Y$¤のコストが必要ですが、我々は$CASH|Y$¤しか持っていないので、その余裕はありません。"
  INSTI_NOT_ENOUGH_HOLD:0 "$NAME|Y$の制度は、受容するのに十分なほど我が国に広まっていません。受容するには、自治率による補正後の開発度の$NEED|Y$%以上が必要ですが、受容しているのは$CURR|Y$%だけです。"
- EMBRACE_INSTI_COST:0 "$NAME|Y$を受容するには$COST|Y$¤のコストがかかり、技術コストが$TECH$変更されます。"
+ EMBRACE_INSTI_COST:2 "Embracing $NAME|Y$ will cost $COST|Y$¤."
  MANAGE_OVEREXTENSION:0 "過剰拡大を管理する"
  EMPEROR_DIPACTIONS_DESC:0 "\n皇帝は次のような外交的行動をとることができます：\n$LIST|Y$"
  PAPAL_CONTROLLER_DIPACTIONS_DESC:0 "教皇の支配者は次のような外交的行動をとることができます：\n$LIST|Y$"
@@ -324,7 +324,7 @@
  MAPMODE_VICTORYCARDS_DESC:0 "どの州に勝利カードがあるかに応じて色を付けます（もしあれば）。州をマウスオーバーすると、そのカードのスコアが表示されます。"
  MAPMODE_CULTURE_DESC:0 "さまざまな文化に応じて州を色分けし、その文化の名前を表示します。"
  MAPMODE_OPINION_DESC:0 "選択国に対する統治者の評価に応じて州を色分けします。"
- MAPMODE_COALITION_DESC:0 "選択国の侵略的拡大に対する統治者の評価に基づいて州を色づけします。色は灰とオレンジの間で変化します。国が赤であれば、彼らはあなたに対する包囲網の参加国です。"
+ MAPMODE_COALITION_DESC:1 "Colors the provinces according to their owner's opinion about the selected country's Aggressive Expansion. If their opinion about the selected country's Aggressive Expansion is below -50 and their general opinion is below 0, they are able to join a coalition and their color scale is amber-red. If their opinion about the selected country's Aggressive Expansion is below -50 but their general opinion is above 0, their colour scale is green-amber. Otherwise, their colour scale is grey-green. If the country is red, they are in a coalition against you."
  MAPMODE_UNREST_DESC:0 "不穏度に応じて州を色分けします。赤は不穏度が高い州を示し、黄色は中程度の不穏度を、緑色は不穏度が低いまたはゼロであることを示しています。縞模様は、反乱軍によって支配されている州を示しています。"
  MAPMODE_COLONIAL_DESC:0 "植民範囲と植民可能性に応じて州を色分けします。緑は植民地化されておらず植民地化できる可能性のある州を示します。赤は植民地化するには遠すぎる州を示します。青色は植民地化された州を示し、青色が濃いほど進行が進んでいることを示します。グレーは既に植民地化された州または都市を示します。"
  MAPMODE_RIVALS_DESC:0 "あなたがライバルに指定した国、またはあなたをライバルに指定した国が所有している州を色付けしています。"
@@ -737,7 +737,7 @@
  NOMAD_SHOCK_PENALTY_DEF:0 "遊牧民が平地にいないため、防御側が受ける突撃ダメージが§R$VAL|%=+1$§!減少します。\n"
  NOMAD_SHOCK_PENALTY_ATT:0 "遊牧民が平地にいないため、攻撃側が受ける突撃ダメージが§R$VAL|%=+1$§!減少します。\n"
  GALLEY_BONUS_INLAND_SEA_DESC:0 "ガレー船は、内海ではガレー船以外に対して$VAL|%=+1$の追加ダメージを与えます。"
- GALLEY_BONUS_NOT_INLAND_SEA_DESC:0 "ここは内海ではありません。ガレー船は$VAL|%=+1$のダメージ増加ボーナスを得られません。"
+ GALLEY_BONUS_NOT_INLAND_SEA_DESC:1 "This is NOT an inland sea or a coastal sea and galleys will get a $VAL|%=+1$ dice penalty here."
  INSUFFICIENT_SUPPORT_DESC:0 "騎兵と歩兵の比率の差が大きすぎる場合、ユニットは不十分な支援ペナルティを受ける。不十分な支援は軍事戦術を$VAL|%R1$減らします。現在の比率は$RATIO|%Y1$です。"
  INSUFFICIENT_SUPPORT_UNIT_DESC_YES:0 "@$TAG$$NAME$はペナルティを受けます（最大比率$MAX|%1R$）"
  INSUFFICIENT_SUPPORT_UNIT_DESC_NO:0 "@$TAG$$NAME$はペナルティを受けません（最大比率$MAX|%1G$）"
@@ -827,10 +827,10 @@
  FE_RANDOM_NEW_WORLD:0 "ランダムな新世界"
  INVALID_REGENCY:0 "$COUNTRY$は現在、暫定評議会によって支配されています。ゲームの開始時に新しい統治者がランダムに生成されます。"
  SET_VARIABLE:0 "$VAR|Y$を$VALUE|Y$に設定する"
- CHANGE_VARIABLE:0 "$VAR|Y$を$VALUE|Y$に変更する"
- SUBTRACT_VARIABLE:0 "$VAR|Y$から$VALUE|Y$を引く"
- MULTIPLY_VARIABLE:0 "$VAR|Y$と$VALUE|Y$を乗じる"
- DIVIDE_VARIABLE:0 "$VAR|Y$を$VALUE|Y$で割る"
+ CHANGE_VARIABLE:1 "$VAR|Y$を$VALUE|Y$に変更する"
+ SUBTRACT_VARIABLE:1 "$VAR|Y$から$VALUE|Y$を引く"
+ MULTIPLY_VARIABLE:1 "$VAR|Y$と$VALUE|Y$を乗じる"
+ DIVIDE_VARIABLE:1 "$VAR|Y$を$VALUE|Y$で割る"
  RANDOM_WORLD_MAP_DATA:0 "マップデータの更新中…"
  RANDOM_WORLD_RESTORE_MAP_BITMAPS:0 "地図ビットマップの復元中…"
  RANDOM_WORLD_RESTORE_CONTINENTS:0 "大陸の復元中…"
@@ -930,7 +930,7 @@
  CHAT_CVAA_EMPTY_TEXT:0 "　"
  CHAT_CVAA_MIC:0 "マイク"
  ONE_TIME_COST:0 "一度きりのコスト"
- PORT_BLOCKADE_BLOCKADE_POWER:0 "封鎖力：$SPEED|0G$"
+ PORT_BLOCKADE_BLOCKADE_POWER:1 "Total Blockade Power from Ships: $POWER|0G$"
  BASE_VALUE_0:0 "基本：$VAL|0$"
  alert_too_many_leaders_army_delayed:0 "指揮官の自由枠上限を超えた将軍は、\n1人につき、毎月1£mil£のコストがかかります。\n現在、毎月$AMT$£mil£のコストがかかっています。"
  alert_too_many_leaders_navy_delayed:0 "指揮官の自由枠上限を超えた提督は、\n1人につき、毎月1£dip£のコストがかかります。\n現在、毎月$AMT$£dip£のコストがかかっています。"
