--- a/source/localisation/dharma_l_english.yml
+++ b/source/localisation/dharma_l_english.yml
@@ -420,7 +420,7 @@
  REFORM_LEVEL_NEEDS_PREVIOUS_DESC:0 "これらを選択する前に、前列を制定する必要があります。"
  CURRENT_REFORM_PROGRESS:0 "$POINTS$の政府改革進捗度を保有しています。次の改革を制定するには$REQPOINTS|Y$必要です。"
  NEXT_REFORM_EXPECTED:0 "そこに到達するのは$WHEN|Y$と予測されます。"
- REFORM_PROGRESS_MODIFIER_DESC:3 "以下の理由により、毎月$POINTS|Y$を獲得します：$FROM_AUTONOMY$$FROM_BUILDINGS$$FROM_MONTHLY$\n"
+ REFORM_PROGRESS_MODIFIER_DESC:3 "以下の理由により、毎月$POINTS|Y$を獲得します：\n$FROM_AUTONOMY$$FROM_BUILDINGS$$FROM_MONTHLY$\n"
  REFORM_INCREASED_COST:1 "改革のレベルが上がるごとに§Y50§!ずつコストが上昇します。"
  YELLOW_TEXT:0 "$NAME|Y$"
  GREEN_TEXT:0 "$NAME|G$"
@@ -938,7 +938,7 @@
  LOSE_REFORMS:1 "$NUM|Y$個の政府改革を失います。\n"
  TERRITORY_CONVERT_RELIGION_NOT_ALLOWED:1 "\n§R改宗するためには、州が完全に中核化され、ステートの一部となっている必要があります§!"
  TERRITORY_CONVERT_CULTURE_NOT_ALLOWED:1 "§R文化を転向するためには、州が完全に中核化され、ステートの一部となっている必要があります§!"
- CHARTER_COMPANY_NO_AVAILABLE_PROVINCES:3 "我々の植民範囲内で、交易会社に割り当て可能な首都でなく既に交易会社ではない州を彼らは保有していていません。"
+ CHARTER_COMPANY_NO_AVAILABLE_PROVINCES:4 "我々の植民範囲内の別大陸にあり、交易会社に割り当て可能な首都でなく既に交易会社ではない州を彼らは保有していていません。"
  CHARTER_COMPANY_INDEBT:0 "勅許会社を求めることはできません。$REASON$\n"
  mechanic_has_parliament_yes:2 "議会を有効化\n貴族階級を無効化"
  COT_ADD_LEVEL_EFFECT:3 "$PROVINCE|Y$の交易中心地レベルが$DELTA|Y$増加します\n"
@@ -971,5 +971,5 @@
  jains_estate_events.3.a:0 "受容"
  mechanic_raze_province_yes:0 "略奪可能な州"
  mechanic_raze_province_no:0 "略奪不可の州"
- NO_CARPET_SIEGE_MOVING:0 "§R移動中に絨毯占領は使用できません§!\n"
+ NO_CARPET_SIEGE_MOVING:1 "§R移動中に自動包囲は管理不可§!\n"
  COT_NOT_ENOUGH_DEVELOPMENT:0 "§R$UPGRADE_NAME|Y$にアップグレードするには$NEED$の開発度が必要ですが、この州の開発度は$CURR$しかありません"
