--- a/source/localisation/golden_century_l_english.yml
+++ b/source/localisation/golden_century_l_english.yml
@@ -149,8 +149,8 @@
  COLONIZE_PROVINCE:0 "州の植民地化"
  EXPEL_MINORITIES:0 "マイノリティを追放する"
  SEND_COLONIST:0 "植民者を送る"
- SEND_COLONIST_TOOLTIP:0 "$PROVINCE|Y$に植民者を派遣します。\n植民者は我々の主要文化と宗教を持った植民地を作ります。"
- SEND_COLONIST_LABEL_TOOLTIP:0 "$PROVINCE|Y$に植民者を派遣することができます。\n植民者は我々の主要文化と宗教を持った植民地を作ります。"
+ SEND_COLONIST_TOOLTIP:1 "$PROVINCE|Y$に植民者を派遣します。\n植民者は植民地を作り、一定の条件を満たした場合は我々の主要文化と宗教に変わります。"
+ SEND_COLONIST_LABEL_TOOLTIP:1 "$PROVINCE|Y$に植民者を派遣することができます。\n植民者は植民地を作り、一定の条件を満たした場合は我々の主要文化と宗教に変わります。"
  SEND_COLONIST_TOOLTIP_EXTRA:0 "追い払いたいマイノリティがいるなら、この州はマイノリティの追放にも適格です。"
  EXPEL_MINORITY_TOOLTIP:0 "$PROVINCE|Y$にマイノリティを追放することができます。\nマイノリティの州の文化と宗教は新しい植民地へと移り、代わりに我が国の主要文化と宗教へと変更されます。"
  SELECT_MINORITY_TOOLTIP:0 "$MINORITY|Y$のマイノリティを$PROVINCE|Y$に追放することにより、我が国の文化と宗教を持つ国民がゆっくりと取って代わります。"
