--- a/source/localisation/government_names_l_english.yml
+++ b/source/localisation/government_names_l_english.yml
@@ -511,3 +511,29 @@
  GRAND_SISTERHOOD:0 "大修道女会"
  ABBESS:0 "女子修道院長"
  MOTHER_SUPERIOR:0 "女子大修道院長"
+ MWENE_KONGO:0 "Mwene Kongo"
+ GREAT_MWENE_KONGO:0 "Mwene Kongo"
+ MWENE_KONGO_fem:0 "Mwene Kongo"
+ GREAT_MWENE_KONGO_fem:0 "Mwene Kongo"
+ CAPTAIN_GENERAL_fem:0 "Captain-General"
+ SHARIFZADE:0 "Sharifzade"
+ SYMBASILEUS:0 "Symbasileus"
+ SYMBASILISSA:0 "Symbasilissa"
+ DUKE_CONSORT:0 "Duke-Consort"
+ KNIAZHICH:0 "Kniazhich"
+ KNIAZHNA:0 "Kniazhna"
+ TSAREVICH:0 "Tsarevich"
+ TSAREVNA:0 "Tsarevna"
+ BURGMEISTER_fem:0 "Bürgermeisterin"
+ GRAND_POSADNIK:0 "Grand Posadnik"
+ GREAT_POSADNIK:0 "Great Posadnik"
+ POSADNITSA:0 "Posadnitsa"
+ GRAND_POSADNITSA:0 "Grand Posadnitsa"
+ GREAT_POSADNITSA:0 "Great Posadnitsa"
+ HOCHMEISTER_fem:0 "Hochmeisterin"
+ LANDMEISTER_fem:0 "Landmeisterin"
+ GROSSMEISTER_fem:0 "Großmeisterin"
+ IMAM_fem:0 "イマーム"
+ GREAT_IMAM_fem:0 "大イマーム"
+ HIGH_IMAM_fem:0 "上イマーム"
+ GREAT_KHOJA_fem:0 "大ホージャ"
