Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -152,7 +152,7 @@
  INVITE_MINORITIES_NO_MINORITY:0 "これを行うには、異教徒や異端者が保持している国教の海外の州について知っている必要がある。\n"
  SANCTION_HOLY_WAR_NO_PROVINCES:0 "全ての効果のある州に請求権が存在する、または中核州。\n"
  unconditional_surrender:0 "無条件降伏"
- UNCONDITIONAL_UNSPORTING:2 "It is unsporting to unconditionally surrender before $VAL|Y$ months have passed in a war. You will be able to unconditionally surrender on $DATE|Y$."
+ UNCONDITIONAL_UNSPORTING:2 "開戦から$VAL|Y$ヶ月経過するまで、無条件降伏は認められるものではありません。$DATE|Y$に無条件降伏が可能になります。"
  objectives_title:0 "目標"
  daimyo_subject:0 "従属大名"
  COALITION_WILL_FORM:1 "この内容で条約を結ぶとあなたを対象とした対抗同盟が形成されます。"
@@ -508,7 +508,7 @@
  GP_NAME_TT:0 "$WHO|Y$は$WHERE|Y$の列強国です。"
  GP_MINOR_NAME_TT:0 "$WHO|Y$は$WHERE|Y$の非列強国です。"
  GP_RANK_TT:0 "最大$MAX|Y$の列強国が常に存在します。"
- GP_RATING_TT:1 "The rating is based on §YDevelopment§! and embraced §YInstitutions§!."
+ GP_RATING_TT:1 "評価値は§Y開発度§!と受容した§Y制度§!を基にしています。"
  GP_TECH_TT:0 "技術コストは次から影響を受けます：\n"
  TRADE_COMPANY_PENALTY:0 "$EFFECT$の影響は$DATE|Y$まで続きます"
  left_trade_company:0 "交易会社を離れる"
@@ -1312,7 +1312,7 @@
  POOL_HAS_MP:0 "§Y$POOL$§!の兵士が募集を待っていることにより、我々の人的資源の予備は§Y$MAX$§!よりも大きくなることはありません。"
  YEARLY_MERITOCRACY:0 "年間能力主義"
  MERITOCRACY_IRO:0 "§Y能力主義§!\n能力主義は以下の理由により毎年$CHANGE$変化します：\n$WHY$"
- YOU_MERITOCRACY_DRO:1 "This represents the bureaucratic competence inside our country. The higher it is, the more efficient our nation will run!\nIt can be increased through Strengthening Government, ideas, policies or events.\nThis level of Meritocracy gives the following effects:"
+ YOU_MERITOCRACY_DRO:1 "これは我々の国内の官僚の能力を表します。高ければ高いほどより効率的に我々の政治が行われます！\n政府の強化、アイデア、政策、イベントなどを通して増やすことができます。\nこの能力主義のレベルは以下の効果があります："
  THEY_MERITOCRACY_DRO:0 "これは彼らの国内の官僚の能力を表します。高ければ高いほどより効率的に彼らの政治が行われます！\nこの能力主義のレベルは以下の効果があります："
  DEVOTION_EFFECT:0 "信仰$VALUE$を$DIRECTION$します。\n"
  HAVE_DEVOTION_LESS_THAN:0 "信仰が右記未満である："
@@ -3721,7 +3721,7 @@
  REBELS_FIGHT_FOR:0 "これらの反乱軍は$NATION$へと離反することを望んでいます。"
  alert_reinforcing_units_instant:0 "§Yユニットが損傷を受けている§W"
  ALERT_REINFORCING_UNITS:0 "§Yあなたのユニットは損傷を受けています§W"
- ALERT_REINFORCING_UNITS_DELAYED:1 "You are reinforcing $TROOPS|0Y$ troops every month ($TROOPSATTR|0Y$ from attrition).\nYou need $TOTAL_MISSING|0Y$ men to fully reinforce your armies.\nReinforcing your standing army costs $COST|2Y$¤ extra per month."
+ ALERT_REINFORCING_UNITS_DELAYED:1 "部隊に毎月$TROOPS|0Y$人（内、消耗により$TROOPSATTR|0Y$人）の兵員を補充しています。\n補充完了には$TOTAL_MISSING|0Y$人の兵員が必要です。\n常備軍の補充には追加コストとして毎月$COST|2Y$¤かかります。"
  ALERT_REINFORCING_UNITS_DELAYED_MERCENARIES:0 "補充中の傭兵部隊があります。人的資源は必要ありませんが、追加コストとして毎月$COST|2Y$¤かかります。"
  SENDGIFTALREADYACTIVE:0 "§R我々は最近彼らに贈り物を送りました。我々の最後の贈り物だけが彼らと我々との関係に影響を与えます。§!"
  CORE_CONST_OTHER_TIP:0 "彼らは現在§Y$PROVINCE$§!の中核化に取り組んでいます。"
@@ -4582,7 +4582,7 @@
  RENEW_WAR_TAXES:0 "戦争税を延長しますか？"
  RENEW_INFLUENCE_NATION_DIALOG_TITLE:0 "国家への影響の更新"
  RENEW_INFLUENCE_NATION_TITLE_DIALOG_DESC:0 "我々の$THEY|Y$への影響力は期限が切れています。"
- RENEW_INFLUENCE_NATION:1 "Should we send a diplomat to continue to influence them for another $MONTHS$ months?\nThis would cost us $COST|Y$¤."
+ RENEW_INFLUENCE_NATION:1 "外交官を派遣し$MONTHS$ヵ月間、彼らに影響を与え続けるべきでしょうか？\nこれには$COST|Y$¤がかかります。"
  NAVAL_UPGRADE_MOTHBALLING:1 "艦隊は使用停止されておりアップグレードすることはできません。$AMOUNT$隻をアップグレードするのに$COST$¤のコストがかかるでしょう。"
  DELETE_TEMPLATE_DIALOG_TITLE:0 "テンプレート削除"
  DELETE_TEMPLATE_DIALOG_DESC:0 "テンプレート$NAME|Y$を削除しますか？"
@@ -4596,7 +4596,7 @@
  doom:0 "破滅"
  authority:0 "権威"
  PARLIAMENT_DEBATE_UNTIL:0 "議論は少なくとも$DATE|Y$まで継続し、その後毎月、終了する可能性が§Y$CHANCE$%§!あります。\nそれに敗北すると我々は$PRESTIGE|R$の威信を失います。"
- CV_DEV_TOTAL_INFO:7 "The total development of our provinces is $DEV|Y$, based on:\n $TAX|Y$ Base Tax\n $PRODUCTION|Y$ Production\n $MANPOWER|Y$ Manpower\nWe have $PROVS|Y$ provinces and $HOME|Y$ non-overseas cores.\nAverage Autonomy in our provinces: $AVERAGEAUTONOMY|%Y$\nAverage Autonomy in our non-overseas provinces: $AVERAGEHOMEAUTONOMY|%Y$"
+ CV_DEV_TOTAL_INFO:7 "我々の州の総開発度は$DEV|Y$であり、以下に基づいています：\n $TAX|Y$の基本税\n $PRODUCTION|Y$の生産\n $MANPOWER|Y$の人的資源\n我々は$PROVS|Y$の州と$HOME|Y$の非海外の中核州を持っています。\n州の平均自治率：$AVERAGEAUTONOMY|%Y$\n非海外州の平均自治率：$AVERAGEHOMEAUTONOMY|%Y$"
  CV_SUB_DEV_TOTAL_INFO:0 "彼らの州の総開発度は$DEV|Y$であり、以下に基づいています：\n $TAX|Y$の基本税\n $PRODUCTION|Y$の生産\n $MANPOWER|Y$の人的資源\n$WHO$は$PROVS|Y$の州と$HOME|Y$の非海外の中核州を持っています。"
  AUTHORITY_FROM_DEV:0 "$ADJ$の開発から：$VAL$"
  DOOM_FROM_PROVINCES:0 "領有している州の数：$VAL$"
@@ -4778,7 +4778,7 @@
  NO_DEVASTATION_PROSP_MAP_TT:0 "$NAME|Y$のすべてが繁栄を享受しています！"
  NO_DEVASTATION_MAP_TT:0 "$NAME|Y$は荒廃していません。"
  DEVASTATION_MAP_TT:0 "$NAME|Y$の荒廃は§R$VAL$%§!です。"
- CONFIRM_CORE_ALL_TITLE:0 "$NAME$のすべての州を中核化"
+ CONFIRM_CORE_ALL_TITLE:0 "$NAME$の州をすべて中核化"
  CONFIRM_CORE_ALL_TITLE_TEXT:0 "§Y$COST$§!£adm£を費やして、以下の$COUNT$/$TOTAL$州を中核州としてもよろしいですか？\n§Y$PROVS$§!"
  CORE_ALL_TOOLTIP:0 "州を中核化するのに十分な£adm£があります。"
  CORE_ALL_TOOLTIP_NO_CORABLE:0 "ここには中核化できる州はありません。"
@@ -5001,7 +5001,7 @@
  NO_UNPAUSE_PLAYERS_BEHIND_TOO_MUCH:0 "一時停止を解除する前に、以下のプレイヤーが追いつくのを待つ必要があります：\n$PLAYERS|Y$"
  NO_SPEEDUP_PLAYERS_BEHIND_TOO_MUCH:0 "ゲームの速度を上げる前に、以下のプレイヤーが追いつくのを待つ必要があります：\n$PLAYERS|Y$"
  reovlutionary_guard_regiment:0 "革命衛兵"
- BANNERS_DESC:0 "Countries of §YManchu§! or §YJurchen§! culture or which have the §YGreat Mongol State§! can raise Banners . Banners cost Corruption to raise and have higher Discipline than normal troops."
+ BANNERS_DESC:0 "§Y満州§!・§Y女真§!文化または§Yモンゴル大ハーン国§!を有する国家は、八旗を編成することができます。八旗は編成に汚職のコストがかかり、通常の軍隊よりも高い規律を持ちます。"
  obj_convert_30_provinces_tooltip:0 "§Y30§!の州を改宗させる\n"
  AVAILABLE_BANNERS_LIMIT:0 "$MAX|Y$の八旗のうち$CURRENT|Y$をすでに徴集しているため、この数は$VAL|Y$に減少します。"
  BLOCK_END_GAME_TAGS:0 "国家形成の制限"
@@ -5031,7 +5031,7 @@
  CV_NOTRESEARCHED_ENGAGEMENT_TOOLTIP:0 "§g－ 海軍交戦幅が§G+$NUM$§g向上（レベル$LEVEL$）§W"
  ENGAGEMENT_WIDTH:0 "海軍交戦幅"
  ENGAGEMENT_WIDTH_INCREASE:0 "海軍交戦幅が§G$VALUE$§W増加した。\n"
- OL_UNIT_CARPET_SIEGE:1 "Sieging provinces"
+ OL_UNIT_CARPET_SIEGE:1 "州の占領"
  HicSuntDraconesDLC:0 "Hic Sunt Dracones"
  IS_CURRYING_FAVORS:0 "すでに$WHO$に対しておべっか中です。"
  IS_NOT_CURRYING_FAVORS:0 "ですが、$WHO$に対して現在おべっかを使っていません。"
@@ -5043,7 +5043,7 @@
  CURRYFAVORSTITLE:0 "おべっかを使う"
  CANCEL_CURRYFAVORS:0 "おべっかを止める"
  CANCEL_CURRYFAVORSTITLE:0 "おべっかを止める"
- CARPET_SIEGE_MISSION_DESC:1 "Sieging provinces"
+ CARPET_SIEGE_MISSION_DESC:1 "州の占領"
  ITA_parliament_name:0 "Parlamento"
  NOV_parliament_name:0 "ヴェーチェ"
  BNG_parliament_name:0 "Jatiya Sangsad"
