--- a/source/localisation/diplomacy_l_english.yml
+++ b/source/localisation/diplomacy_l_english.yml
@@ -159,8 +159,8 @@
  REMOVE_RIVAL_DESC:0 "この国とのライバル関係を削除します。"
  CLICK_RIVAL_SELECTION:0 "ライバルを選択します。"
  CANT_SET_RIVAL_ALREADY:0 "この国はすでにライバル関係にあります。"
- CANT_SET_RIVAL_OVERLORD:0 "あなたの宗主国をライバルに指定することはできません。"
- CANT_SET_RIVAL_SUBJECT:0 "属国をライバルに指定することはできません。"
+ CANT_SET_RIVAL_OVERLORD:0 "自国の宗主国をライバルに指定することはできません。"
+ CANT_SET_RIVAL_SUBJECT:0 "自国の従属国をライバルに指定することはできません。"
  CLICK_RIVAL_SELECTION_REPLACE:0 "§Y$COUNTRY$§Wをライバルとして置き換えます。これには§Y$VAL$§Wの外交点が必要です。"
  NO_RIVAL_SELECTED:0 "ライバルが選択されていません。"
  CHOOSE_FROM_LIST:0 "§Yリストもしくはマップ上から新たなライバルを選択してください。\nこれは§R$VAL$§!£dip£かかります。§!"
@@ -189,8 +189,8 @@
  FABRICATECLAIMDESC_NOPROV:1 "請求権を捏造可能な隣接する州がありません。"
  JUSTIFY_TRADE_CONFLICTTITLE:0 "交易紛争を正当化する"
  JUSTIFY_TRADE_CONFLICTDESC:0 "あなたの交易を脅かす国との交易紛争を正当化します。"
- JUSTIFY_TRADE_CONFLICT_NO_POWER:3 "$WHO|Y$ must have trade power in a trade node in which one of your merchants operates, where you have at least $OURVAL|Y0%$ of the total power."
- JUSTIFY_TRADE_CONFLICT_LOW_POWER:3 "$WHO|Y$ must have at least $VAL|Y0%$ of the total power in a trade node in which one of your merchants operates, where you have at least $OURVAL|Y0%$ of the total power. They currently have $MAX|Y0%$ in $NODE|Y$, where you have $MAXOURS|Y0%$."
+ JUSTIFY_TRADE_CONFLICT_NO_POWER:3 "$WHO|Y$は、あなたが全体の$OURVAL|Y0%$以上の交易力を持ち、かつあなたの商人がいる交易ノードに交易力を有していなければなりません。"
+ JUSTIFY_TRADE_CONFLICT_LOW_POWER:3 "$WHO|Y$は、あなたが全体の$OURVAL|Y0%$以上の交易力を持ち、かつあなたの商人がいる交易ノードに$VAL|Y0%$以上の交易力を有していなければなりません。現在あなたが$MAXOURS|Y0%$持つ$NODE|Y$で彼らは$MAX|Y0%$有しています。"
  TRANSFER_TRADE_POWERTITLE:0 "交易力の移譲を強要する"
  TRANSFER_TRADE_POWERDESC:0 "$WHO$があなたに交易力を送出したいか尋ねます。"
  TRANSFER_TRADE_POWER_SELECT_DESC:0 " $WHO$に対して交易力の一部を送出させる提案をしますか？"
@@ -204,7 +204,7 @@
  SABOTAGEDESC:0 "対象国とそのライバル、敵と近隣諸国の間の評判を妨害します。"
  SABOTAGEDESCDERIVED:0 "評判失墜工作は$ADJ|Y$における諜報網規模を$COST|R$減らし、以下の効果があります：\n$DESC$\n\nこれは$DATE|Y$まで続きます。"
  SABOTAGEALREADYPRESENTDESC:0 "奴らの評判は最近、失墜しています。"
- INFILTRATEDESC:1 "Infiltrate Administration lifts the Fog of War from the target country for ourselves and our war allies until $DATE|Y$."
+ INFILTRATEDESC:1 "政府への潜入は、対象国の戦場の霧を$DATE|Y$まで我々と同盟国に対して晴らします。"
  IS_INFILTRATEDESC:0 "我々のスパイは、奴らの政府に潜入しており、$DATE|Y$まで情報をもたらせるでしょう。"
  CONFIRM_CANCEL_INFILTRATE:0 "優れた諜報網を張り巡らせたスパイを呼び戻してよろしいでしょうか？私たちはもはや§Y$COUNTRY$§!で何が起こっているのか見ることができなくなります。"
  SABOTAGE_RECRUITMENT:0 "徴兵妨害"
@@ -230,7 +230,7 @@
  SUPPORTREBELSDESCDERIVED:1 "反乱勢力を支援することは、$ADJ|Y$における諜報網規模を$COST|R$減少させ、$YEARS|Y$年間にわたり蜂起に向けた進捗の上昇率を毎月§Y$AMT$%§!増加させます。\nあなたは、彼らの蜂起中もまた支援できるでしょう。もし反乱軍が力を獲得すれば、彼らは同盟国となるでしょう。"
  SUPPORTREBELSDESCALREADYPRESENTDESC:0 "何者かがすでに対象国の反乱軍を支援しています。"
  SUPPORTREBELSDESCNOREBELSDESC:0 "支援できる反乱軍が存在しません。"
- SUPPORT_REBELS_OVERLORD:0 "あなたの属国の反乱軍を支援することはできません。"
+ SUPPORT_REBELS_OVERLORD:0 "自国の従属国に対する反乱軍を支援することはできません。"
  SUPPORTREBELSDESC_NEEDTECH:0 "統治技術レベルが$VAL|Y$以上必要です。"
  CANCEL_SUPPORTREBELSTITLE:0 "反乱支援を止める"
  CANCEL_SUPPORTREBELSDESC:0 "\n我々が支援する§Y$COUNTRY$§!の反乱軍は$AMOUNT$が蜂起に向かっています。我々の支援は§Y$DATE$§!まで続きます。"
@@ -578,7 +578,7 @@
  BUILDSPYNETWORK_LONG_DESC_2:0 "彼らは我々の諜報網規模を毎月$AMT|G$増加させます。\n\n我々の諜報員が活動中で諜報網規模が§Y25§!を超えている場合、発見される可能性が毎月§R$RISK$%§!あります。発覚すれば、対象国との関係が悪化し、諜報網規模は縮小され、しばらくの間規模の成長が妨げられます。"
  CANCEL_BUILDSPYNETWORK_LONG_DESC:0 "$COUNTRY|Y$において諜報網構築と情報収集を行っている諜報員を呼び戻しますか？我々の諜報網は構築を停止している間、規模が徐々に減衰します。"
  COUNTERESPIONAGE_OUTLINER:0 "$NAME$は$PROV|Y$（$COUNTRY|Y$）で防諜活動を行っています。これは彼らが送り込んでいる諜報員を発見する確率を$AMT$増加させます。"
- COUNTERESPIONAGE_NO_SUBJECT:1 "我々は従属国であるため防諜活動を行えません。"
+ COUNTERESPIONAGE_NO_SUBJECT:1 "従属国である我が国は防諜活動を行えません。"
  COUNTERESPIONAGETITLE:0 "防諜活動"
  COUNTERESPIONAGE_DESC:0 "対象国で防諜活動を行う外交官を送ります。"
  CANCEL_COUNTERESPIONAGE_DESC:0 "対象国で防諜活動を行っている外交官を召還します。"
@@ -607,7 +607,7 @@
  BECOME_TRIBUTARY_TRADE_LEAGUE:0 "$WHO$は貿易同盟から離れます。"
  BECOME_UNION:0 "$FIRST$と$SECOND$は同君連合を構築し、$NAME$が両国を統治する$RULER$になります。"
  SECEDE_PROVINCES:0 "$WHO$は$WHAT$を$TO$に割譲します。"
- CORE_GIVEUP:1 "$WHO$ will renounce their cores in $WHAT$. "
+ CORE_GIVEUP:1 "$WHO$が$WHAT$の中核集を放棄します。"
  VASSAL_GIVEUP:0 "$WHO$は$WHAT$への宗主国としての支配を終わらせます。"
  VASSAL_TRANSFER:0 "$WHO$は$WHAT$への宗主国としての支配を移譲します。"
  COUNTRY_RELEASE:0 "$WHO$は$WHAT$を主権国家として解放します。"
@@ -675,7 +675,7 @@
  WE_GIVING_FLEET_ACCESS:0 "既に港湾使用許可を与えています。"
  WE_NOT_GIVING_FLEET_ACCESS:0 "港湾使用許可を与えていません。"
  SAME_OVERLORD:0 "同じ宗主国を持っています。"
- NOCLAIMISREGENCY:1 "While they have a Regency Council, we cannot claim the throne."
+ NOCLAIMISREGENCY:1 "彼の国に摂政評議会がある間は、王位を請求できません。"
  WEWARSUBSIDIES:0 "補助金を与えます。"
  WENOTWARSUBSIDIES:0 "どのような補助金も与えません！"
  ALREADYINSULT_NOT_POSS:0 "既に侮辱を与えています。再び侮辱を与えることは$DATE|Y$までできません。"
