--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -5,7 +5,7 @@
  bav_expand_in_bavaria_desc:0 "バイエルンは統一されたとはいえ、オーストリアやボヘミアに単独で立ち向かうことはできない。我々は中核州となる地域を拡張し、我々よりも弱い近隣諸国を支配のもとに置かなくてはならない。"
  emp_bav_union_with_palatinate_title:0 "ヴィッテルスバッハ家の統一"
  emp_bav_union_with_palatinate_desc:0 "ヴィッテルスバッハ家の分家の数々はバイエルンの国境の向こうにまで及んでいる。その一つは明らかにバイエルン・ヴィッテルスバッハ家にこそふさわしい地位である選帝侯位を得ることにより、長きにわたってライン河地方とオーバープファルツに根を張ってきた。この親類一同を再結集し、（皇帝の同意をとりつけると少し説得することで）選帝侯位を我ら自身のものとして要求するのはまったく正当なことだ。"
- emp_bav_union_with_palatinate_effect_tooltip:0 "このミッションを達成すると§Yプファルツ§!に同君連合を強要できます："
+ emp_bav_union_with_palatinate_effect_tooltip:0 "§Yプファルツ§!に同君連合を強要してこのミッションを達成した場合："
  emp_bav_union_with_palatinate_effect_tooltip2:0 "§Y神聖ローマ皇帝§!は§Yプファルツ§!選帝侯位を§Y[Root.GetUsableName]§!に返還するかを決断します。"
  emp_bav_union_with_palatinate_effect_tooltip3:0 "\n§Yプファルツ§!への同君連合が強制されない場合："
  emp_bav_be_good_at_religion_title:0 "信仰の案内"
@@ -36,8 +36,8 @@
  emp_bav_standing_army_desc:0 "我々の領邦を防衛し強化するという、軍への要求が増大しているため、強力な常備軍の設立が求められている。そのバイエルン国軍は当てにならない傭兵の助けなしに独力で活動できるものでなければならない。"
  emp_bav_sway_cologne_title:0 "ケルンの支配"
  emp_bav_sway_cologne_desc:0 "どうにかして、独立心の強いケルン選帝侯を我々の勢力に縛り付けることができれば、我々がドイツで勢力を得るための障害をさらに一つ取り除くことになるだろう。"
- emp_bav_sway_cologne_effect_tooltip:0 "このミッションを達成すると§Yケルン§!に属国化を強要できます："
- emp_bav_sway_cologne_effect_tooltip2:0 "\n§Yケルン§!が属国にならない場合："
+ emp_bav_sway_cologne_effect_tooltip:0 "§Yケルン§!に従属国化を強要してこのミッションを達成した場合："
+ emp_bav_sway_cologne_effect_tooltip2:0 "\n§Yケルン§!が従属国にならない場合："
  emp_bav_tame_brandenburg_title:0 "ブランデンブルクの平定"
  emp_bav_tame_brandenburg_desc:0 "ブランデンブルクは、かつてヴィッテルスバッハ家が領有していた地域の一つである。それなのに、新参者のホーエンツォレルン家は北ドイツに独自の強大な国家を樹立する野望を持っている。我々はその野望が夢に過ぎないことを思い知らさなければならない。"
  emp_bav_netherlands_title:0 "バイエルン領低地地方"
@@ -172,9 +172,9 @@
  emp_mlo_destroy_austria_desc:0 "非常に長年にわたって、北イタリアは歴代のオーストリア皇帝の脅威のもとで生きていた。我々はイタリアが永久に奴らに脅かされずにいられるようにしなければならない。"
  emp_mlo_friends_in_high_places_title:0 "有力なる友邦"
  emp_mlo_friends_in_high_places_desc:0 "ヨーロッパ列強にとってミラノという賞品は垂涎の的であり、彼らは豊かで分裂したイタリア半島に幾度も貪欲な目を向けてきた。我々が生き延びて繁栄しようとするのなら、征服をたくらむ者たちを追い払う意志と力のある強力な庇護者が必要だ。"
- emp_mlo_friends_in_high_places_trigger_tooltip:1 " 国家：\n   以下のいずれかが満たされている：\n     §Y[Root.GetName]§!と同盟している。\n     §Y[Root.GetName]§!の属国である。"
+ emp_mlo_friends_in_high_places_trigger_tooltip:1 " 国家：\n   以下のいずれかが満たされている：\n     §Y[Root.GetName]§!と同盟している。\n     §Y[Root.GetName]§!の従属国である。"
  emp_mlo_secure_rule_title:0 "我らの支配の保証"
- emp_mlo_secure_rule_desc:0 "ミラノの[Root.GovernmentName]は反抗的な属国、怒り狂う皇帝、復讐に燃える教皇といった者たちに生存を脅かされている。我が国の存続を確かなものとするには、幅広い国々からの賛同と承認が必要だ。"
+ emp_mlo_secure_rule_desc:0 "ミラノの[Root.GovernmentName]は反抗的な臣民、怒り狂う皇帝、復讐に燃える教皇といった者たちに生存を脅かされている。我が国の存続を確かなものとするには、幅広い国々からの賛同と承認が必要だ。"
  emp_mlo_secure_rule_effect_tooltip:0 "§Yミラノ§!に対して開戦事由§Y連合の回復§!を持っているすべての国は、その開戦事由を失います"
  emp_mlo_swiss_mercs_title:0 "スイスとの絆"
  emp_mlo_swiss_mercs_desc:0 "スイス傭兵はアルプス山脈の両側における紛争で、多くの軍隊に頼みの綱として用いられてきた。もし我々が彼らを確実に優先雇用できるのなら、敵より大きな優位に立つだろう。"
@@ -184,10 +184,10 @@
  emp_mlo_fortify_alps_effects_tooltip:0 "§Y指定州§!のいずれかにある§Y[Root.GetName]§!の所有する要塞が§Gアップグレード§!されます。"
  emp_mlo_alpine_wall_title:0 "アルプスの壁"
  emp_mlo_alpine_wall_desc:0 "北イタリアは人がそこに住んでいる限り、外国からの侵略に脆弱である。天然の要害であるアルプス山脈と現地人の軍事能力だけが外国の支配に立ち向かう手段だ。我々は絶対にこの国の自由を無傷のまま残していかねばならないのだ。"
- emp_mlo_alpine_wall_trigger_tooltip:1 "下記の§Y北イタリア§!の州が存在しない：\n  以下の条件を1つ満たしている：\n    §Yラテン§!文化グループではない国に領有されていない。\n    §Yラテン§!文化グループの国の属国に領有されていない。"
+ emp_mlo_alpine_wall_trigger_tooltip:1 "下記の§Y北イタリア§!の州が存在しない：\n  以下の条件を1つ満たしている：\n    §Yラテン§!文化グループではない国に領有されている。\n    §Yラテン§!文化グループではない国の従属国に領有されている。"
  emp_mlo_italian_freedom_title:0 "イタリアの自由"
  emp_mlo_italian_freedom_desc:0 "イタリアは長年にわたって国内問題に外国から干渉される屈辱に耐えてきた。ついに外国の支配をこれを最後に終わらせる時がやってきたのだ。"
- emp_mlo_italian_freedom_trigger_tooltip:0 "下記に該当する§Yイタリア§!地方の州がない：\n  領有者：\n    以下のいずれかが満たされている：\n      §Yラテン§!文化グループではない。\n      §Yラテン§!文化グループ以外の国家の従属国である。"
+ emp_mlo_italian_freedom_trigger_tooltip:0 "§Yイタリア§!地方に下記の州が存在しない：\n  領有国：\n    以下のいずれかが満たされている：\n      §Yラテン§!文化グループではない。\n      §Yラテン§!文化グループではない国の従属国である。"
  emp_mlo_renaissance_city_title:0 "ルネサンス都市"
  emp_mlo_renaissance_city_desc:0 "ミラノが自由で独立した国家として最後の晩餐を味わいたくないのならば、この国の富を取り戻し文化を復興しなければならない。"
  emp_mlo_develop_po_valley_title:0 "ロンバルディアの発展"
@@ -201,7 +201,7 @@
  emp_mlo_control_the_vatican_desc:0 "教皇はキリスト教における道徳的権威であるだけでなく、イタリアの広大な領域に膨大な直接的権力も持っている。それだけで、教皇が恐るべき敵であることを意味している。なんとかして、教皇がその膨大な力を我々の利益に反する形で絶対に用いないようにするべきだ。"
  emp_mlo_milan_victorious_title:0 "ミラノの勝利"
  emp_mlo_milan_victorious_desc:0 "我が軍は我々に立ち向かう者すべてに勝利を収め、どの敵にも最初の会戦で我が国に栄光をもたらすだろう！"
- emp_mlo_milan_victorious_tooltip:2 "下記の国家が存在しない：\n  以下のうち1つを満たしている：\n    §Y[Root.GetName]§!の隣国である。\n    以下のいずれかの地方に首都がある：§Yフランス§!、§Y南ドイツ§!、§Yイベリア§!、§Yイタリア§!または§Yバルカン§!\n  §Y[Root.GetName]§!以上の規模の軍を持っている。\n  過去§Y100§!年間に戦争で§Y[Root.GetName]§!に敗北していない。"
+ emp_mlo_milan_victorious_tooltip:2 "下記の国家が存在しない：\n  以下のうち1つを満たしている：\n    §Y[Root.GetName]§!の隣国である。\n    次のいずれかの地方に首都がある：§Yフランス§!、§Y南ドイツ§!、§Yイベリア§!、§Yイタリア§!、§Yバルカン§!\n  §Y[Root.GetName]§!以上の規模の陸軍を持っている。\n  過去§Y100§!年以内に戦争で§Y[Root.GetName]§!に敗北していない。"
  emp_mlo_university_rules_title:0 "[Root.GetMLOMissionUniversityRulesTitle]"
  emp_mlo_university_rules_desc:0 "[Root.GetMLOMissionUniversityRulesDesc]"
  emp_mlo_university_rules_monarchy_title:0 "法科大学"
@@ -286,7 +286,7 @@
  emp_sav_have_a_friend_desc:0 "サヴォワは征服を望む者たちにとって垂涎の的となっている。ヨーロッパの列強国の一つと友邦となり、外国からの侵略に対抗する手段を持つことが極めて重要だ。"
  emp_sav_cover_your_bases_title:0 "抜け目なし"
  emp_sav_cover_your_bases_desc:0 "我が国の歴史は、全ての果物を一つのバスケットに入れておくと大損害につながりやすいということを証明してきた。我々は何が起ころうとも強力な後援者が確実に我々とともにあるよう、同盟関係のネットワークを構築しておかねばならない。"
- emp_sav_cover_your_bases_trigger_tooltip:1 "§Y[Root.GetName]§!の同盟国あるいは属国。"
+ emp_sav_cover_your_bases_trigger_tooltip:1 "§Y[Root.GetName]§!の同盟国あるいは従属国。"
  emp_sav_fortify_all_title:0 "アルプスの要塞群"
  emp_sav_fortify_all_desc:0 "サヴォワとピエモンテの自然の地形はどちらもアルプス山脈の両端にある高地であり、その地勢は天然の要害となってきた。この地域に大規模な防御工事を施すことで、我が国は侵略者に容易に征服されなくなるだろう。"
  emp_sav_self_reliant_army_title:0 "軍事的自立"
@@ -340,7 +340,7 @@
  sav_king_of_cyprus:0 "キプロス王"
  desc_sav_king_of_cyprus:0 "我々はキプロス王国への請求を実行した。我々はいまや東地中海において異教徒にさらなる攻撃を開始するための基地を獲得したのだ。"
  new_flavour_sav.1.name:0 "トリノ市"
- new_flavour_sav.1.desc:0 "トリノは近年になってますます繁栄しており、多くの人々に我が[Root.GovernmentName]の中心として[Root.Capital.GetName]と同じほどふさわしいと考えられている。経済が発展しているほか、トリノは（特にアルプスの西からの攻撃から）守りやすくもある。そのうえ他のイタリアの属国からも近く、その属国の人びとは我が国の支配層にサヴォイアの臣下よりも文化的にも近い。そのため多くの人々がトリノへの首都移転を公然と企てている。この案を進めるべきだろうか？"
+ new_flavour_sav.1.desc:0 "トリノは近年になってますます繁栄しており、多くの人々に我が[Root.GovernmentName]の中心として[Root.Capital.GetName]と同じほどふさわしいと考えられている。経済が発展しているほか、トリノは（特にアルプスの西からの攻撃から）守りやすくもある。そのうえサヴォイアの臣民よりも文化的に我が国の支配層に近いイタリアの臣民にとって、トリノはより身近な存在だ。そのため多くの人々がトリノへの首都移転を公然と提案している。この案を進めるべきだろうか？"
  new_flavour_sav.1.A:0 "トリノを我々の新首都にしよう。"
  new_flavour_sav.1.B:0 "我が[Root.GovernmentName]の中心は[Root.Capital.GetName]だ。"
  new_flavour_sav.2.name:0 "聖マウリツィオ・ラザロ騎士団"
@@ -377,7 +377,7 @@
  emp_hab_an_empire_roman_desc:0 "ローマの街をその手中に収めない限り、神聖ローマ帝国は嘲笑の的になり続けるだろう。"
  emp_hab_empire_pass_reforms_title:0 "A.E.I.O.U."
  emp_hab_empire_pass_reforms_desc:1 "神聖ローマ帝国を強化して、強国として代表できる大領土を有する国家を作りあげねばならない。また、その国家は開戦自由の独占を強いることが可能なほど権威を集権化する必要がある。ーその時初めて、フリードリヒ３世が用いた標語：アウストリー・エスト・インペラエ・オーニ・ウニヴァーゾ（全世界を統べるのはオーストリアの王朝である）、に沿うことができるだろう。"
- emp_hab_empire_pass_reforms_trigger_tooltip:0 "下記の神聖ローマ帝国の全加盟国：\n  §Yオーストリア§!の評価が§Y1§!以上である。"
+ emp_hab_empire_pass_reforms_trigger_tooltip:0 "下記の神聖ローマ帝国の全構成国：\n  §Yオーストリア§!の評価が§Y1§!以上である。"
  emp_hab_spread_dynasties_title:0 "[Root.GetSpreadDynastyOrFallbackMissionTitle]"
  emp_hab_spread_dynasties_desc:0 "[Root.GetHABDynastyOrFallbackMissionDesc]"
  emp_hab_spread_dynasties_has_dynasty_desc:0 "ハプスブルク家の者ができる限り多く王座に就くのは当然のことだ。我が一族のためにヨーロッパの王座を獲得せねばならない。"
@@ -406,7 +406,7 @@
  emp_hab_conquer_switzerland_desc:0 "かつて、スイス併合を試みたことがあったが、その都度阻止されたーそのうちの一つは、弓矢を持った単なる一人の農夫によって阻止される始末だ。何世代にもわたって受けた屈辱を乗り越え、これら反抗的な農民たちを自国の支配下に組み込まねばならない。"
  emp_hab_conquer_burgundy_title:0 "ブルゴーニュの再征服"
  emp_hab_conquer_burgundy_desc:0 "ブルゴーニュ領は神聖ローマ帝国から消滅した。彼らを確実にもう一度どうにかして自国の支配権の下に置かねばならない。"
- emp_hab_conquer_burgundy_trigger_tooltip:0 "下記の州が存在しない：\n  §Y州§!が§Yフランス§!地方にある。\n  神聖ローマ帝国の一部である。\n  以下のいずれかが満たされている：\n    神聖ローマ帝国外の国家に領有されている。\n    神聖ローマ帝国外の従属国である国家に領有されている。"
+ emp_hab_conquer_burgundy_trigger_tooltip:0 "下記の州が存在しない：\n  §Y州§!が§Yフランス§!地方にある。\n  神聖ローマ帝国の一部である。\n  以下のいずれかが満たされている：\n    神聖ローマ帝国外の国家に領有されている。\n    神聖ローマ帝国外の国家の従属国に領有されている。"
  emp_hab_conquer_france_title:0 "フランスの弱体化"
  emp_hab_conquer_france_desc:0 "フランス人はドイツ及びヨーロッパ全域に対する覇権を争っている主な宿敵だ。彼らがもう二度と我が帝国の野望を脅かすことができない程度まで弱体化させねばならない。"
  emp_hab_conquer_france_tooltip:0 "年間収入が§Y[Root.GetName]§!のそれ未満である。"
@@ -432,7 +432,7 @@
  emp_hab_balance_of_power_desc:0 "ヨーロッパ内では、自国優位の継続を保証してくれる勢力均衡を確立せねばならない。"
  emp_hab_our_balance_of_power_title:0 "均衡を変えよ"
  emp_hab_our_balance_of_power_desc:0 "勢力均衡は非常にうまくいっているが、もしそれを自国有利に転じさせることができるなら、ヨーロッパ全体の中で傑出した国家として正当な立場を主張できるまで、もうあと少しの辛抱だ。"
- emp_hab_our_balance_of_power_tooltip:1 "下記の州：\n  §Yヨーロッパ§!大陸である。\n  所有者：\n    以下のいずれかが満たされている：\n      §Y[Root.GetName]§!である。\n      §Y[Root.GetName]§!の従属国である。\n      §Y[Root.GetName]§!と同盟している。\n      §Y[Root.GetName]§!の同盟国の従属国である。\n      神聖ローマ帝国の一部であり、§Y[Root.GetName]§!が§Y皇帝§!である。\n      神聖ローマ帝国の一部である国家の従属国であり、§Y[Root.GetName]§!が§Y皇帝§!である。"
+ emp_hab_our_balance_of_power_tooltip:1 "下記の州：\n  §Yヨーロッパ§!大陸である。\n  領有国：\n    以下のいずれかが満たされている：\n      §Y[Root.GetName]§!である。\n      §Y[Root.GetName]§!の従属国である。\n      §Y[Root.GetName]§!と同盟している。\n      §Y[Root.GetName]§!の同盟国の従属国である。\n      神聖ローマ帝国の一部であり、§Y[Root.GetName]§!が§Y皇帝§!である。\n      神聖ローマ帝国の一部である国家の従属国であり、§Y[Root.GetName]§!が§Y皇帝§!である。"
  emp_hab_crush_the_revolution_title:0 "[Root.GetEmbraceOrCrushRevolutionMissionTitle]"
  emp_crush_the_revolution_title:0 "革命の打破"
  emp_embrace_the_revolution_title:0 "革命の受容"
@@ -444,9 +444,9 @@
  emp_mission_power_to_dynasty_title:0 "[Root.Monarch.Dynasty.GetName]よ栄光あれ！"
  emp_mission_power_to_country_title:0 "[Root.GetName]に栄光あれ！"
  emp_hab_power_to_habsburg_desc:0 "ヨーロッパの覇権は我が宿命である。我々はそれを両の手で握らなければならず、必ず我が優位性を認めない者など存在しないようにせねばならない"
- emp_hab_power_to_habsburg_trigger_tooltip:0 "下記の国家が存在しない：\n  §Yヨーロッパ大陸§!に§Y首都§!がある。\n  列強である。\n  §Yオーストリア§!と同盟していない。\n  過去100年間に戦争で§Yオーストリア§!に敗北していない。"
- emp_hab_power_to_habsburg_trigger2_tooltip:0 "下記の国家が存在しない：\n  §Yヨーロッパ大陸§!に§Y首都§!がある。\n  総開発度が§Y300§!以上である。\n  §Yオーストリア§!と同盟していない。\n  §Yオーストリア§!の従属国ではない。\n  過去100年間に戦争で§Yオーストリア§!に敗北していない。"
- no_hre_province_owned_by_non_hre_member_or_overlord_trigger:0 "下記の州が存在しない：\n  神聖ローマ帝国の一部である。\n  以下のいずれかが満たされている：\n    神聖ローマ帝国外の国家に領有されている。\n    神聖ローマ帝国外の従属国である国家に領有されている。"
+ emp_hab_power_to_habsburg_trigger_tooltip:0 "下記の国家が存在しない：\n  §Yヨーロッパ大陸§!に§Y首都§!がある。\n  列強である。\n  §Yオーストリア§!と同盟していない。\n  過去100年以内に戦争で§Yオーストリア§!に敗北していない。"
+ emp_hab_power_to_habsburg_trigger2_tooltip:0 "下記の国家が存在しない：\n  §Yヨーロッパ大陸§!に§Y首都§!がある。\n  総開発度が§Y300§!以上である。\n  §Yオーストリア§!と同盟していない。\n  §Yオーストリア§!の従属国ではない。\n  過去100年以内に戦争で§Yオーストリア§!に敗北していない。"
+ no_hre_province_owned_by_non_hre_member_or_overlord_trigger:0 "下記の州が存在しない：\n  神聖ローマ帝国の一部である。\n  以下のいずれかが満たされている：\n    神聖ローマ帝国外の国家に領有されている。\n    神聖ローマ帝国外の国家の従属国に領有されている。"
  hab_austrian_netherlands:0 "オーストリアの低地地方"
  desc_hab_austrian_netherlands:0 "低地地方を確保したことで、我が野望を、ヨーロッパの競争相手と同等の植民地帝国設立に向けるのに絶好の立ち位置にいる。"
  hab_conquest_of_italy:0 "イタリアの属国化"
@@ -542,7 +542,7 @@
  emp_hun_bohemian_borderlands_desc:0 "ボヘミア選帝侯は自国北西部の国境地帯を領有している。強大で繁栄した王国は堕落した異端どもと関わり合いがあることが分かっており、彼らが自領で広がるのを防ぐため、彼らに対して措置を講ずるべきだ。"
  emp_hun_bohemian_crown_title:0 "ボヘミアの王冠"
  emp_hun_bohemian_crown_desc:0 "ボヘミア王位と自国のそれとを一つにすることで、国力は大きく強化されるだろうー特に、彼らの選帝侯の座が我々に移るようにするならば。"
- emp_hun_bohemian_crown_effect_tooltip:0 "このミッションを達成すると§Yボヘミア§!に同君連合を強要できます："
+ emp_hun_bohemian_crown_effect_tooltip:0 "§Yボヘミア§!に同君連合を強要してこのミッションを達成した場合："
  emp_hun_weaken_austria_title:0 "オーストリアの弱化"
  emp_hun_weaken_austria_desc:0 "オーストリアとの平和は長続きしないー我々の土地は、大公が野心を抱かずにはいられないほどの魅力があるからだ。西の隣人からの攻撃から安全となるよう、オーストリアを弱体化させる必要がある。"
  emp_hun_weaken_austria_trigger_tooltip:0 "§Yオーストリア§!とその従属国（非朝貢国）によって領有されている州が13未満である。"
@@ -550,7 +550,7 @@
  emp_hun_duchy_of_austria_desc:0 "ウィーンは、[Root.GovernmentName]へのすばらしい追加となるだろう。我々はそれを自身で獲得するべきだ。"
  emp_hun_bulwark_of_christianity_title:0 "キリスト教の防波堤"
  emp_hun_bulwark_of_christianity_desc:0 "オスマン帝国の脅威に対するキリスト教世界の主要な擁護者であることで、我々はキリスト教の防波堤として知られるようになった。異教徒が我々に投げかけるあらゆるものと一致する我々の能力を示すことにより、我々はこの称号に完全に値するものであることを保証できる"
- emp_hun_bulwark_of_christianity_trigger_tooltip:1 "下記の国家がない：\n  以下の全てが満たされている：\n    §Yムスリム§!である。\n    以下のいずれかが満たされている：\n      §Yトルコ・セム§!文化グループである。\n      §Y[Root.GetName]§!の隣国である。\n      首都が§Yヨーロッパ§!にある\n    §Y[Root.GetName]§!より大きな陸軍を持っている。"
+ emp_hun_bulwark_of_christianity_trigger_tooltip:1 "下記の国家が存在しない：\n  以下の全てが満たされている：\n    §Yムスリム§!である。\n    以下のいずれかが満たされている：\n      §Yトルコ・セム§!文化グループである。\n      §Y[Root.GetName]§!の隣国である。\n      首都が§Yヨーロッパ§!にある\n    §Y[Root.GetName]§!より大きな陸軍を持っている。"
  hun_funded_paulines:0 "聖パウロス修道会の信用"
  desc_hun_funded_paulines:0 "最初の隠修士聖パウロス修道会は、我々の資金提供を通じてその勢力を拡大していった。したがって、この修道会のハンガリー国家への信用は増大している。"
  hun_hungary_poland:0 "ハンガリーのポーランド"
@@ -684,7 +684,7 @@
  emp_bur_king_of_the_franks_effect_tooltip:1 "フランス地方の全ての§Yフランス§!の属国は§Y[Root.GetName]§!の属国となります。"
  emp_bur_influence_the_princes_title:0 "諸侯への影響力"
  emp_bur_influence_the_princes_desc:0 "過去において、我々は帝国の部外者であった。これは変わらなければならない。我々は帝国諸侯の地位を向上させるため、一丸となって努力する必要がある。"
- emp_bur_influence_the_princes_trigger_tooltip:1 " 下記の神聖ローマ帝国加盟国：\n   §Y[Root.GetName]§!の評価が§Y60§!以上である。"
+ emp_bur_influence_the_princes_trigger_tooltip:1 " 下記の神聖ローマ帝国構成国：\n   §Y[Root.GetName]§!の評価が§Y60§!以上である。"
  emp_bur_feast_of_pheasants_title:0 "雉の饗宴"
  emp_bur_feast_of_pheasants_desc:0 "オスマン帝国の力の成長は憂慮すべきものだ。我々は新たな十字軍のため、再びヨーロッパの海岸から彼らを追い出すための軍勢を集めなければならない。"
  emp_bur_feast_of_pheasants_trigger_tooltip:1 " §Y[Root.GetName]§!の同盟国が§Yオスマン§!をライバル指定している"
@@ -2190,7 +2190,7 @@
  rivalled_or_rival_of:0 "ライバルであるか、§Y[Root.GetName]§!にライバル指定されている"
  cb_crusade_pheasants:0 "聖戦"
  cb_crusade_pheasants_desc:0 "奴らは呪われた異教徒だ！"
- emp_bur_influence_the_princes_trigger_tooltip2:1 " 下記の神聖ローマ帝国の加盟国：\n   §Y[Root.GetName]§!の評価が§Y60§!以上である。"
+ emp_bur_influence_the_princes_trigger_tooltip2:1 " 下記の神聖ローマ帝国構成国：\n   §Y[Root.GetName]§!の評価が§Y60§!以上である。"
  emp_bur_influence_the_princes_trigger_tooltip3:1 " 下記の国家：\n   首都が北ドイツまたは南ドイツ地方内にある。\n   §Y[Root.GetName]§!の評価が§Y60§!以上である。"
  emp_bur_lead_the_empire_fallback_trigger:0 "下記の国家が存在しない：\n  首都が北ドイツまたは南ドイツ地方内にある。\n  §Y10§!以上の州が国家またはその従属国（非朝貢国）によって領有されている。"
  emp_bur_dutch_revolt_has_happened:0 "§Yオランダの反乱§!が発生している。"
@@ -2210,7 +2210,7 @@
  incident_hungary_mission:0 "ハンガリーが帝国への加盟を望む"
  new_flavour_hun.2.C:0 "この請願は慎重に検討するべきだ。"
  gain_claims_on_palatinate_provinces:0 "§Y[Root.GetName]§!は§Yプファルツ§!によって領有されている全ての州に対する恒久的な請求権を獲得します。"
- pal_protect_from_france_effect_tooltip1:0 "フランスと友好関係になることでこのミッションを完了すると、次の報酬が与えられます："
+ pal_protect_from_france_effect_tooltip1:0 "フランスと友好関係になることでこのミッションを達成した場合、次の報酬が与えられます："
  pal_protect_from_france_effect_tooltip2:0 "\nそれ以外の場合、以下の報酬が与えられます："
  bri_build_alliances_title:0 "同盟の構築"
  bri_build_alliances_desc:0 "はるかに強い国々の間に挟まれたブルターニュは、存続し繁栄するために、強力な同盟国を必要とするだろう。"
@@ -2269,7 +2269,7 @@
  emp_sav_conquer_provence_reward_tooltip:0 "§Y[Root.GetName]§!はヨーロッパにある§Yオクシタン§!文化の州すべてに対する恒久的な請求権を獲得します。"
  emp_sav_conquer_occitania_effect_tooltip2:0 "§Y[Root.GetName]§!はヨーロッパにある§Yガスコーニュ§!文化の州すべてに対する恒久的な請求権を獲得します。"
  full_annexation_tooltip:0 "§Rこのオプションを選択すると[Root.GetName]は完全に併合されます。§!"
- fla_flemish_cloth_trigger_tooltip:0 "§Y低地諸国§!地方に領有する全ての州が§Y工場§!を持つ"
+ fla_flemish_cloth_trigger_tooltip:0 "§Y低地諸国§!地方に領有する全ての州に§Y工場§!がある"
  emp_pap_rebuild_the_papal_treasury_effect_tooltip:0 "教皇の十分の一税収入は§Y20§!年間、§G20%§!増加します。"
  pap_higher_curia_contribution_hidden_modifier:0 "基本："
  desc_pap_higher_curia_contribution_hidden_modifier:0 ""
@@ -2453,6 +2453,6 @@
  desc_pom_royal_solidarity:0 "我々はポーランドの君主と団結し、圧制者から彼らを解放する！"
  pom_pol_unity:0 "古い絆の回復"
  desc_pom_pol_unity:0 "我々は再びポーランドの人々と再会した。そうすることで、ポーランドの地方の君主たちは我々に、騎士にふさわしい支援を提供してくれた。"
- build_manufactories_mission_tooltip:0 "の§Y[Root.GetName]§!が領有する州が工場を持つ。"
+ build_manufactories_mission_tooltip:0 "の§Y[Root.GetName]§!が領有する州に工場がある。"
  hin_industrial_tt:0 "の§Yベンガル§!地方に領有する州が§Y工場§!を持つ。"
- peasants_means_of_production_tt:0 "の領有する州が製造所、織物工場、武器工場、海軍機器工場または溶鉱炉を持つ。"
+ peasants_means_of_production_tt:0 "の領有州に製造所、織物工場、武器工場、海軍機器工場または溶鉱炉がある。"
