--- a/source/localisation/government_names_l_english.yml
+++ b/source/localisation/government_names_l_english.yml
@@ -515,21 +515,21 @@
  GREAT_MWENE_KONGO:0 "Mwene Kongo"
  MWENE_KONGO_fem:0 "Mwene Kongo"
  GREAT_MWENE_KONGO_fem:0 "Mwene Kongo"
- CAPTAIN_GENERAL_fem:0 "Captain-General"
+ CAPTAIN_GENERAL_fem:0 "軍政府長官"
  SHARIFZADE:0 "Sharifzade"
  SYMBASILEUS:0 "Symbasileus"
  SYMBASILISSA:0 "Symbasilissa"
  DUKE_CONSORT:0 "Duke-Consort"
  KNIAZHICH:0 "Kniazhich"
  KNIAZHNA:0 "Kniazhna"
- TSAREVICH:0 "Tsarevich"
- TSAREVNA:0 "Tsarevna"
- BURGMEISTER_fem:0 "Bürgermeisterin"
- GRAND_POSADNIK:0 "Grand Posadnik"
- GREAT_POSADNIK:0 "Great Posadnik"
- POSADNITSA:0 "Posadnitsa"
- GRAND_POSADNITSA:0 "Grand Posadnitsa"
- GREAT_POSADNITSA:0 "Great Posadnitsa"
+ TSAREVICH:0 "ツァレーヴィチ"
+ TSAREVNA:0 "ツァレーヴナ"
+ BURGMEISTER_fem:0 "女市長"
+ GRAND_POSADNIK:0 "上ポサードニク"
+ GREAT_POSADNIK:0 "大ポサードニク"
+ POSADNITSA:0 "ポサドニツァ"
+ GRAND_POSADNITSA:0 "上ポサドニツァ"
+ GREAT_POSADNITSA:0 "大ポサドニツァ"
  HOCHMEISTER_fem:0 "Hochmeisterin"
  LANDMEISTER_fem:0 "Landmeisterin"
  GROSSMEISTER_fem:0 "Großmeisterin"
