--- a/source/localisation/triggers_and_effects_l_english.yml
+++ b/source/localisation/triggers_and_effects_l_english.yml
@@ -212,7 +212,7 @@
  ADD_IDEA_EFFECT:0 "$IDEA|Y$のアイデアを追加します。"
  REMOVE_IDEA_EFFECT:0 "$IDEA|Y$のアイデアを削除します。"
  HRE_INHERITABLE_ENABLED:1 "神聖ローマ帝国は常に同じ国により継承されるようになります。\nもはや皇帝の外交関係枠を属国の諸侯たちで占有することはなくなります\n"
- HRE_INHERITABLE_DISABLED:1 "神聖ローマ帝国は選挙制になります！\n皇帝の属国の諸侯たちは、外交関係枠を使用します\n"
+ HRE_INHERITABLE_DISABLED:1 "神聖ローマ帝国は選挙制になります！\n皇帝の従属国の諸侯たちは、外交関係枠を使用します\n"
  HAS_IDEAGROUP_TRIGGER:0 "§Y$COUNTRY$§Wが§Y$GROUP$§Wを持っている。\n"
  HAS_NOT_IDEAGROUP_TRIGGER:0 "§Y$COUNTRY$§Wが§Y$GROUP$§Wを持っていない。\n"
  HAS_MAXIDEAGROUP_TRIGGER:0 "§Y$COUNTRY$§Wが§Y$GROUP$§Wを完了している。\n"
