Save/Update files [ci skip]

--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -1000,8 +1000,8 @@
  NEWCLIENTCOUNTRY_SETUP:0 "衛星国が形成されたとき"
  NEWCLIENTCOUNTRY_HEADER:0 "$MESSENGER$"
  NEWCLIENTCOUNTRY_1:0 "新しい衛星国！"
- NEWCLIENTCOUNTRY_2:0 "$MONARCHTITLE$は新たな衛星国を名付けました"
- NEWCLIENTCOUNTRY_3:0 "$NAME$"
+ NEWCLIENTCOUNTRY_2:0 "$MONARCHTITLE$、新たな衛星国"
+ NEWCLIENTCOUNTRY_3:0 "$NAME$が"
  NEWCLIENTCOUNTRY_4:0 "建国されました。彼らは$COUNTRY$に忠実に尽くします。"
  NEWCLIENTCOUNTRY_5:0 " "
  NEWCLIENTCOUNTRY_6:0 ""
