--- a/source/localisation/areas_regions_l_english.yml
+++ b/source/localisation/areas_regions_l_english.yml
@@ -652,7 +652,7 @@
  algiers_area:0 "アルジェ"
  algiers_area_name:0 "アルジェ"
  algiers_area_adj:0 "アルジェ"
- hautes_plaines_area:0 "Hautes Plains"
+ hautes_plaines_area:0 "高地平野"
  hautes_plaines_area_name:0 "ティトリ"
  hautes_plaines_area_adj:0 "ティトリ"
  ouled_nail_area:0 "ウーレド・ナイル"
@@ -2081,7 +2081,7 @@
  caribbean_sea_area:0 "カリブ海"
  gulf_of_mexico_area:0 "メキシコ湾"
  sea_of_labrador_area:0 "ラブラドル海"
- hudson_bay_sea_area:0 "Hudson Bay Sea"
+ hudson_bay_sea_area:0 "ハドソン湾"
  denmark_strait_area:0 "デンマーク海峡"
  gulf_of_guinea_sea_area:0 "ギニア湾"
  cape_of_storms_area:0 "暴風岬"
