--- a/source/localisation/astu_1_31_l_english.yml
+++ b/source/localisation/astu_1_31_l_english.yml
@@ -14,20 +14,20 @@
  CENTRALIZE_STATE_CONSTRUCTION_1:0 "ステートの集権化を完了"
  CENTRALIZE_STATE_CONSTRUCTION_2:0 "$PROVINCE$での工事が完了しました。"
  CENTRALIZE_STATE_CONSTRUCTION_3:1 "今、$STATE|Y$はステート集権化されてます。"
- CENTRALIZE_STATE_CONSTRUCTION_LOG:0 "$PROVINCE$でのステート集権化工事が完了"
+ CENTRALIZE_STATE_CONSTRUCTION_LOG:0 "$PROVINCE$でのステート集権化工事、完了"
  CENTRALIZE_STATE_CONSTRUCTION_BTN1:0 "OK"
  CENTRALIZE_STATE_CONSTRUCTION_CANCEL_TITLE:0 "ステートの集権化の中止"
  CENTRALIZE_STATE_CONSTRUCTION_CANCEL_SETUP:0 "領有者の変更やステートがテリトリーに変更されたことによって、ステートの集権化が中止されたとき"
  CENTRALIZE_STATE_CONSTRUCTION_CANCEL_1:0 "ステートの集権化の中止"
  CENTRALIZE_STATE_CONSTRUCTION_CANCEL_2:0 "$PROVINCE$での工事を中止しました。"
- CENTRALIZE_STATE_CONSTRUCTION_CANCEL_LOG:0 "$PROVINCE$でのステートの集権化工事を中止"
+ CENTRALIZE_STATE_CONSTRUCTION_CANCEL_LOG:0 "$PROVINCE$でのステート集権化工事、中止"
  CENTRALIZE_STATE_CONSTRUCTION_CANCEL_BTN1:0 "OK"
  CENTRALIZE_STATE_CANCEL_TITLE:0 "ステートの集権化工事が解除されました"
  CENTRALIZE_STATE_CANCEL_SETUP:0 "領有者の変更によってステートの集権化工事が解除されたとき"
  CENTRALIZE_STATE_CANCEL_1:0 "ステートの集権化工事が解除されました"
  CENTRALIZE_STATE_CANCEL_2:0 "$PROVINCE$での工事は解除されました。"
  CENTRALIZE_STATE_CANCEL_3:1 "そのステートの州をすべて領有していません。"
- CENTRALIZE_STATE_CANCEL_LOG:0 "$PROVINCE$でのステートの集権化が解除"
+ CENTRALIZE_STATE_CANCEL_LOG:0 "$PROVINCE$でのステート集権化、解除"
  CENTRALIZE_STATE_CANCEL_BTN1:0 "OK"
  CONFIRMABANDONSTATECENTRALIZED:0 "$STATE$はもはやステートの集権化はなされていません。"
  INFLACTION_REDUCTION:0 "インフレ削減に対する補正：\n"
@@ -39,7 +39,7 @@
  CONSTRUCTION_LOST_1:0 "工事の中止"
  CONSTRUCTION_LOST_2:0 "移住によって、艦船の建造は中止されました。"
  CONSTRUCTION_LOST_3:0 "港がないと、艦船の建造は出来ません。"
- CONSTRUCTION_LOST_LOG:0 "新しい州への移住により、船が失われた"
+ CONSTRUCTION_LOST_LOG:0 "新しい州への移住により、船が失われる"
  CONSTRUCTION_LOST_BTN1:0 "OK"
  PRIMARY_LOCAL:0 "§Y第一管理者§!\nこのプレイヤーは全てのイベントを受け取ることができます。\n"
  NOT_PRIMARY_LOCAL:0 "§Y第二管理者§!\nこのプレイヤーはイベントを受け取りません。\n"
