--- a/source/localisation/cradle_of_civilization_l_english.yml
+++ b/source/localisation/cradle_of_civilization_l_english.yml
@@ -148,7 +148,7 @@
  desc_jafari_scholar_modifier:0 "我々は現在、我が国での神学的議論をさらに進めるため、ジャアファル派学者を受け入れている。"
  zaidi_scholar_modifier:0 "ザイド派学者"
  desc_zaidi_scholar_modifier:0 "我々は現在、我が国での神学的議論をさらに進めるため、ザイド派学者を受け入れている。"
- CONFIRMSCHOLAR:0 "$SCHOOL$学者の招待の確認"
+ CONFIRMSCHOLAR:0 "$SCHOOL$学者の招聘の確認"
  CONFIRMSCHOLAR_TEXT:0 "$EFFECT$"
  RELIGIOUS_SCHOOL_NAME:0 "$NAME$"
  WAITING_FOR_X_MORE_PLAYERS:0 "$PLAYERS$を待っています"
@@ -255,7 +255,7 @@
  desc_local_sufi:0 "地元の社会はカリスマ的なスーフィーの強い影響を受けている。この精神的指導者は、ウラマーの直接的な影響からはほど遠いものの、彼はここで強い支持を持ち、その多くは初めてイスラムに改宗している。"
  local_sufi_chased_away:0 "宗教の正統派の強制"
  desc_local_sufi_chased_away:0 "我々は非ムスリムの間でさえ非常に有力であったにもかかわらず、この地方のスーフィーのシャイフを追放し、地元の忠実な人々の間で、より厳格な正統性を強制した。"
- has_religious_scholars_trigger_tooltip:0 "宗教学者を招待した。"
+ has_religious_scholars_trigger_tooltip:0 "宗教学者を招聘した。"
  academic_respect:0 "互いへの尊敬"
  ruler_overriding_ulema:0 "国家の裁判所での紛争"
  desc_ruler_overriding_ulema:0 "この地域の裁判所に踏み込んで干渉したことで、我々は地元の裁判官を怒らせ、その結果、人々の間に悪意が生じている。"
@@ -411,9 +411,9 @@
  RELIGIOUS_SCHOLAR_EXPIRY_TITLE:0 "宗教学者は去った"
  RELIGIOUS_SCHOLAR_EXPIRY_SETUP:0 "宗教学者が我が国を去ったとき"
  RELIGIOUS_SCHOLAR_EXPIRY_HEADER:0 "宗教学者は去った"
- RELIGIOUS_SCHOLAR_EXPIRY_1:0 "$MOD$"
- RELIGIOUS_SCHOLAR_EXPIRY_2:0 "以下において期限切れとなりました。"
- RELIGIOUS_SCHOLAR_EXPIRY_3:0 "$COUNTRY$"
+ RELIGIOUS_SCHOLAR_EXPIRY_1:0 "$MOD$は"
+ RELIGIOUS_SCHOLAR_EXPIRY_2:0 "期限切れとなりました。"
+ RELIGIOUS_SCHOLAR_EXPIRY_3:0 "$COUNTRY$においてです。"
  RELIGIOUS_SCHOLAR_EXPIRY_4:0 "20年間、我々の賓客だった$MOD|Y$は、今や他のマドラサに行ってしまいました。"
  RELIGIOUS_SCHOLAR_EXPIRY_5:0 ""
  RELIGIOUS_SCHOLAR_EXPIRY_6:0 ""
@@ -424,7 +424,7 @@
  RELIGIOUS_SCHOLAR_EXPIRY_MAP:0 ""
  MISSIONARY_ZEAL_CONVERSION_SPEED_MOD:0 "$WHO$の布教強度：$VAL$\n"
  CONFIRM_SELECT_TRADING_POLICY:0 "交易政策を選択"
- CONFIRM_SELECT_TRADING_POLICY_DESC:1 "\n$NODE|Y$における、あなたの交易政策を$NAME|Y$に設定しますか？あなたは§Y$MONTHS$ヶ月間§!新しい交易政策を選択できません。\n"
+ CONFIRM_SELECT_TRADING_POLICY_DESC:1 "\n$NODE|Y$における交易政策を$NAME|Y$に設定しますか？§Y$MONTHS$ヶ月間§!新しい交易政策を選択できません。\n"
  TRADING_POLICY_MAINTAINED_IF:1 "\n以下の条件が満たされなくなった場合、政策は$DEFAULT|Y$に戻されます：\n$IF$"
  growing_merchant_community:0 "成長する商人社会"
  merchants_discriminated:0 "商人は差別された"
@@ -832,7 +832,7 @@
  LOAD_SAVE_CN_MULTIPLAYER:0 "カスタム国家がマルチプレイヤーで作成された後に、セーブデータをロードすることはできません。"
  HISTORICAL_START_SAVE_MULTIPLAYER:0 "マルチプレイヤーでセーブデータをロードした後に歴史的スタートに戻ることはできません。"
  RNW_CN_MULTIPLAYER:0 "マルチプレイヤーでカスタム国家が作成された後にランダムな新世界を作成することはできません。"
- alert_can_invite_scholar_instant:0 "§Y学者§!を招待可能"
+ alert_can_invite_scholar_instant:0 "§Y学者§!を招聘可能"
  alert_can_invite_scholar_delayed:0 "$LIST$"
  alert_can_invite_scholar_list_entry:0 "$SCHOOL|Y$\n"
  RELATION_UPKEEP_ENTRY:0 "$NATION|Y$ ($RELATION|G$)\n"
