--- a/source/localisation/dharma_l_english.yml
+++ b/source/localisation/dharma_l_english.yml
@@ -452,7 +452,7 @@
  ASSIMILATEDCULTURE_4:0 "彼らはもはや我が支配の脅威ではありません。"
  ASSIMILATEDCULTURE_5:0 ""
  ASSIMILATEDCULTURE_6:0 ""
- ASSIMILATEDCULTURE_LOG:0 "$CULTURE$が同化された"
+ ASSIMILATEDCULTURE_LOG:0 "$CULTURE$、同化へ"
  ASSIMILATEDCULTURE_BTN1:0 "OK"
  ASSIMILATEDCULTURE_BTN2:0 "OK"
  ASSIMILATEDCULTURE_BTN3:0 "移動"
@@ -466,7 +466,7 @@
  ASSIMILATEDCULTUREGROUP_4:0 "効果："
  ASSIMILATEDCULTUREGROUP_5:0 "$MODIFIER$"
  ASSIMILATEDCULTUREGROUP_6:0 ""
- ASSIMILATEDCULTUREGROUP_LOG:0 "$CULTURE_GROUP$が同化された"
+ ASSIMILATEDCULTUREGROUP_LOG:0 "$CULTURE_GROUP$、同化へ"
  ASSIMILATEDCULTUREGROUP_BTN1:0 "OK"
  ASSIMILATEDCULTUREGROUP_BTN2:0 "OK"
  ASSIMILATEDCULTUREGROUP_BTN3:0 "移動"
@@ -480,7 +480,7 @@
  NONASSIMILATEDCULTUREGROUP_4:0 "我々は以下の効果を喪失しました："
  NONASSIMILATEDCULTUREGROUP_5:0 "$MODIFIER$"
  NONASSIMILATEDCULTUREGROUP_6:0 ""
- NONASSIMILATEDCULTUREGROUP_LOG:0 "$CULTURE_GROUP$文化グループはもはや同化されていない"
+ NONASSIMILATEDCULTUREGROUP_LOG:0 "$CULTURE_GROUP$、もはや同化とみなされず"
  NONASSIMILATEDCULTUREGROUP_BTN1:0 "OK"
  NONASSIMILATEDCULTUREGROUP_BTN2:0 "OK"
  NONASSIMILATEDCULTUREGROUP_BTN3:0 "移動"
