--- a/source/localisation/diplomacy_l_english.yml
+++ b/source/localisation/diplomacy_l_english.yml
@@ -837,7 +837,7 @@
  PEACEOFFER_WAR_REPARATIONS_SELECTED:0 "$NAME$の従属化と戦争賠償の請求は同時に行えません。"
  PEACEOFFER_CANNOT_COMBINE_WITH:0 "この項目と$NAME$を組み合わせることはできません。"
  PEACEOFFER_NON_WARLEADER_CANNOT_ANNEX_WARLEADER:0 "戦争主導国だけが敵側主導国を併合できます。"
- PEACEOFFER_CANNOT_MAKE_CORE:0 "$TAG$が中核州にできないため、この州を選択することはできません。"
+ PEACEOFFER_CANNOT_MAKE_CORE:0 "$TAG$が中核州にできないため、この州は選択できません。"
  PEACEOFFER_CANNOT_RELEASE_NATION_TWICE:0 "既に$OTHER_RELEASER|Y$が解放しているため、$NEW_NATION|Y$を解放することはできません。"
  PEACETREATY_REVOKE_CORE:0 "中核州の取り消し"
  PEACETREATY_RELEASE_VASSAL:0 "従属の取り消し"
