--- a/source/localisation/missions_l_english.yml
+++ b/source/localisation/missions_l_english.yml
@@ -184,7 +184,7 @@
  establish_colonial_nation_mission_colonial_brazil_tooltip:0 "ブラジル植民地に植民地国家を形成するため、5つの植民地を都市レベルまで育てよ。"
  discover_ivory_coast_node_title:0 "象牙海岸で待ち構えるもの"
  discover_ivory_coast_node_desc:0 "アフリカの周辺に、アジアに向かう航路が存在することは長い間語られてきた。我々がアジアの香辛料のための新しい交易路を確立したいのであれば、それを探求するべきだ。"
- discover_ivory_coast_tt:0 "象牙海岸のノードを発見"
+ discover_ivory_coast_tt:0 "象牙海岸ノードを発見する。"
  ivory_coast_trade:0 "象牙海岸の交易利権"
  colony_in_ivory_coast_node_title:0 "西アフリカでの足がかり"
  colony_in_ivory_coast_node_desc:0 "アフリカ沿岸の探検により、航海は長くなることが明らかである。したがって、我々は交易艦隊が係留するための港を取得しなければならない。"
@@ -193,7 +193,7 @@
  south_african_trading_post_tt:1 "§Y南アフリカ§!のすべての州を所有していることで、交易ノードは10年間、以下の補正を獲得します：\n州の交易力：§G+1.00§!\n州の交易力：§G+20%§!\n交易額：§G+0.50§!"
  discover_good_hope_node_title:0 "さらに南で待ち構えるもの"
  discover_good_hope_node_desc:0 "アフリカの周辺に、アジアに向かう航路が存在することは長い間語られてきた。我々がアジアの香辛料のための新しい交易路を確立したいのであれば、それを探求するべきだ。"
- discover_good_hope_tt:0 "南アフリカのノードを発見"
+ discover_good_hope_tt:0 "南アフリカノードを発見する。"
  good_hope_trade:0 "喜望峰の交易利権"
  colony_in_good_hope_node_title:0 "南アフリカでの足がかり"
  colony_in_good_hope_node_desc:0 "アフリカ沿岸の探検により、航海は長くなることが明らかである。したがって、我々は交易艦隊が係留するために喜望峰における港を取得しなければならない。"
@@ -208,32 +208,32 @@
  conquer_zanzibar_tt:1 "ザンジバル州を征服する。"
  conquer_mombasa_mission_title:1 "スワヒリ海岸沖への足がかり－モンバサ"
  conquer_mombasa_mission_desc:1 "モンバサはスワヒリ海岸の交易港の一つである。それを征服することは、我々に追加の港を与え、アジアへの交易路に対する足がかりを提供するだろう。"
- conquer_mombasa_tt:0 "モンバサ州の征服"
+ conquer_mombasa_tt:0 "モンバサ州を征服する。"
  conquer_mogadishiu_mission_title:1 "スワヒリ海岸沖への足がかり－モガディシュ"
  conquer_mogadishiu_mission_desc:1 "モガディシュはソマリ海岸の交易港の一つである。それを征服することは、我々に追加の港を与え、アジアへの交易路に対する足がかりを提供するだろう。"
  conquer_mogadishiu_tt:0 "モガディシュ州を征服する。"
  discover_aden_gulf_node_title:0 "アジアへの入口を発見"
  discover_aden_gulf_node_desc:0 "コーヒー豆とその交易文化で有名なアラビア半島は、常にアジアとヨーロッパの間の交易路の上に置かれていた。我々は、インドに進出する前に、それらの交易ノードを探索しなければならない。"
- discover_aden_gulf_tt:0 "アデン湾のノードを発見"
+ discover_aden_gulf_tt:0 "アデン湾ノードを発見する。"
  aden_gulf_trade:0 "アデン湾の交易利権"
  conquer_masqat_mission_title:0 "オマーンでの足がかり"
  conquer_masqat_mission_desc:0 "アラビア半島のマスカットは、香辛料、絹やその他の富に向けての、アジアへの入り口である。"
  conquer_masqat_tt:0 "マスカット州を征服する。"
  discover_indus_node_title:0 "インドへの入口を発見"
  discover_indus_node_desc:0 "何世紀もの間、アジアの香辛料や絹は、ヨーロッパの交易商に富の夢をもたらしてきた。それらは我々の支配の中にあるが、我々はまずインドの交易ノードの航路を探索しなければならない。"
- discover_indus_tt:0 "インダス海岸のノードを発見"
+ discover_indus_tt:0 "インダス海岸ノードを発見する。"
  indus_node_trade:0 "インダスの交易利権"
  discover_goa_node_title:0 "インド西海岸で待ち構えるものを発見"
  discover_goa_node_desc:0 "何世紀もの間、アジアの香辛料や絹は、ヨーロッパの交易商に富の夢をもたらしてきた。それらは我々の支配の中にあるが、我々はまずインドの交易ノードの航路を探索しなければならない。"
- discover_goa_tt:0 "ゴアのノードを発見"
+ discover_goa_tt:0 "ゴアノードを発見する。"
  goa_node_trade:0 "ゴアの交易利権"
  discover_ceylan_node_title:0 "南インドで待ち構えるもの"
  discover_ceylan_node_desc:0 "何世紀もの間、アジアの香辛料や絹は、ヨーロッパの交易商に富の夢をもたらしてきた。それらは我々の支配の中にあるが、我々はまずインドの交易ノードの航路を探索しなければならない。"
- discover_ceylan_tt:0 "セイロン海峡ノードを発見"
+ discover_ceylan_tt:0 "セイロン海峡ノードを発見する。"
  ceylan_node_trade:0 "セイロンの交易利権"
  discover_bengal_node_title:0 "インド東海岸で待ち構えるもの"
  discover_bengal_node_desc:0 "何世紀もの間、アジアの香辛料や絹は、ヨーロッパの交易商に富の夢をもたらしてきた。それらは我々の支配の中にあるが、我々はまずインドの交易ノードの航路を探索しなければならない。"
- discover_bengal_tt:0 "ベンガル海岸のノードを発見"
+ discover_bengal_tt:0 "ベンガル海岸ノードを発見する。"
  bengal_node_trade:0 "ベンガルの交易利権"
  trading_post_modifier:0 "海外交易の高まり"
  desc_trading_post_modifier:0 "アジアに向かう交易路を探している探検家たちは、探索艦隊のための係留港を設立した。これは近隣に住む原住民たちとの交易の増加につながっている。"
