--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -1832,7 +1832,7 @@
  SERVER_LOST:0 "サーバーが見つかりません…"
  HOST_BUTTON:0 "ホスト"
  JOIN_BUTTON:0 "参加"
- LOG_SETTING_LOG:0 "ログに表示"
+ LOG_SETTING_LOG:0 "ログに表示します。"
  LOG_SETTING_POPUP:0 "ポップアップウィンドウを開く"
  LOG_SETTING_MAP:0 "地図に表示。"
  LOG_SETTING_IDLE:0 "待機状態です。"
@@ -3179,8 +3179,8 @@
  COUNTRY_STARTS:0 "いずれかの国"
  LEDGER_BUILDING_LEVEL:0 "建造物"
  UNIQUE_BUILDINGS:0 "固有"
- HAVE_LESS_UNITS_OF_TYPE:0 "§Y$NUM$§W未満の§Y$TYPE$§Wを持っています。"
- HAVE_MORE_UNITS_OF_TYPE:0 "§Y$NUM$§W未満の§Y$TYPE$§Wを持っています。"
+ HAVE_LESS_UNITS_OF_TYPE:0 "§Y$TYPE$§Wが§Y$NUM$§W未満である。"
+ HAVE_MORE_UNITS_OF_TYPE:0 "§Y$TYPE$§Wが§Y$NUM$§W未満である。"
  GOODS_TRADED_IN:0 "§Y$GOOD$§Wの世界への供給量の§Y$VAL$§W%はここで交易されています。"
  LEDGER_TRADE_GOOD:0 "交易品"
  BUILDING_CATEGORY_7:0 "工場"
@@ -3897,7 +3897,7 @@
  LEDGER_LIGHT_SHIP:0 "小型船"
  LEDGER_HEAVY_SHIP:0 "大型船"
  LEDGER_TRANSPORT:0 "輸送船"
- LEDGER_GALLEY:0 "ガレー"
+ LEDGER_GALLEY:0 "ガレー船"
  LEDGER_INFANTRY:0 "歩兵"
  LEDGER_CAVALRY:0 "騎兵"
  LEDGER_ARTILLERY:0 "砲兵"
@@ -3990,7 +3990,7 @@
  ALLIES_WON:0 "§G同盟国は勝利しました§W"
  WAR_OVERVIEW_SHORT:0 "戦争の概要"
  MOVE_CAPITAL_SHORT:0 "この州に遷都するにはここをクリックしてください。"
- MOVE_CAPITAL_SHORT_CORE:0 "ここは中核州ではないので遷都することはできません。"
+ MOVE_CAPITAL_SHORT_CORE:0 "中核州ではないため、この州に遷都できません。"
  MOVE_CAPITAL_SHORT_COST:0 "この州に遷都することはできません。"
  MOVE_CAPITAL_LONG:0 "特に首都が攻撃されやすい場所にある場合、遷都すると有利になることがあります。"
  MOVE_CAPITAL_COST:0 "遷都にかかるコストは§Y$POWER$§!£adm£になります。"
@@ -4253,9 +4253,9 @@
  HAVE_LESS_UNITS_IN_THAN:0 "$PROVINCE$のユニットが右記未満である："
  HAVE_MORE_UNITS_IN_THAN:0 "$PROVINCE$のユニットが右記以上である："
  HAVE_MORE_THAN_GALLEYS_IN:0 "$PROVINCE$に少なくとも$UNITS$のガレー船を持っている"
- HAVE_LESS_THAN_GALLEYS_IN:0 "$PROVINCE$に$UNITS$未満のガレー船を持っている"
+ HAVE_LESS_THAN_GALLEYS_IN:0 "$PROVINCE$のガレー船が$UNITS$未満である"
  HAVE_MORE_THAN_INFANTRY_IN:0 "$PROVINCE$に少なくとも$UNITS$の歩兵を持っている"
- HAVE_LESS_THAN_INFANTRY_IN:0 "$PROVINCE$に$UNITS$未満の歩兵を持っている"
+ HAVE_LESS_THAN_INFANTRY_IN:0 "$PROVINCE$の歩兵が$UNITS$未満である"
  IS_AT_PEACE_WITH:0 "右記と戦争中ではない："
  IS_AT_WAR_WITH:0 "右記と戦争中である："
  IS_AT_WAR:0 "$WHO$は戦争中です。"
@@ -7647,7 +7647,7 @@
  CONFIRM_TRADE_COST:0 "コスト：§Y$AMOUNT$§W£dip"
  MOVE_TRADE_PORT_CURRENT:0 "あなたの交易首都です。ここであなたの交易を収集します。他のノードで交易を収集することもできますが、競争力は大幅に低下します。"
  MOVE_TRADE_PORT_SHORT:0 "交易首都をこの州に移転するにはここをクリックしてください。"
- MOVE_TRADE_PORT_SHORT_CORE:0 "中核州ではないため、この州に交易首都を移転することはできません。"
+ MOVE_TRADE_PORT_SHORT_CORE:0 "中核州ではないため、この州に交易首都を移転できません。"
  MOVE_TRADE_PORT_SHORT_COST:0 "この州に交易首都を移転することはできません。少なくとも$POWER$£dip£が必要です。"
  MOVE_TRADE_PORT_LONG:0 "交易首都の移転は、新しいノードがより豊かで、あなたがそこでより多くの交易力を生成する能力を持っているなら、有利かもしれません。"
  MOVE_TRADE_PORT_COST:0 "移動のためのコストは$POWER$£dip£です。"
