--- a/source/localisation/achievements_l_english.yml
+++ b/source/localisation/achievements_l_english.yml
@@ -650,7 +650,7 @@
  NEW_ACHIEVEMENT_76_NAME:0 "カーーーン"
  NEW_ACHIEVEMENT_76_DESC:0 "絶対主義の時代の前に、モンゴル帝国を再興する。"
  NEW_ACHIEVEMENT_77_NAME:0 "カリブの騎士"
- NEW_ACHIEVEMENT_77_DESC:1 "聖ヨハネ騎士団で、カリブと地中海の全ての島を領有する。（植民地が持っていても駄目）"
+ NEW_ACHIEVEMENT_77_DESC:1 "聖ヨハネ騎士団で開始し、カリブと地中海の島をすべて領有する。（植民地が持っていても駄目）"
  NEW_ACHIEVEMENT_78_NAME:0 "オーストラリア＝ハンガリー"
  NEW_ACHIEVEMENT_78_DESC:0 "オーストラリアの部族で開始し、オーストラリアを統一しハンガリーを属国化する。"
  NEW_ACHIEVEMENT_79_NAME:0 "シェモートにあらず"
@@ -660,7 +660,7 @@
  NEW_ACHIEVEMENT_81_NAME:0 "Swahili Persuasion"
  NEW_ACHIEVEMENT_81_DESC:0 "キルワとして、モルッカとインドネシアをすべて改宗する。"
  NEW_ACHIEVEMENT_82_NAME:0 "砂は嫌いだ"
- NEW_ACHIEVEMENT_82_DESC:1 "砂漠や海岸砂漠以外の地形の州を領有せずに、最大の開発度が保有する。"
+ NEW_ACHIEVEMENT_82_DESC:1 "砂漠や海岸砂漠以外の地形の州を領有せずに、最大の開発度を持つ国家となる。"
  NEW_ACHIEVEMENT_83_NAME:0 "Surfing USA"
  NEW_ACHIEVEMENT_83_DESC:0 "ハワイからアメリカ合衆国を形成する。"
  NEW_ACHIEVEMENT_84_NAME:0 "インポスター症候群"
